Update batches with correct encoding

--- a/hartshorn-i18n/src/main/resources/hartshorn/batches/26062021/translations_cs.properties
+++ b/hartshorn-i18n/src/main/resources/hartshorn/batches/26062021/translations_cs.properties
@@ -29,79 +29,79 @@ command.missing.handler=No supported command handler found for '{0}'
 command.overflow=$4Too many arguments
 command.parameter.missing.arguments=$4Not enough arguments for parameter '{0}'
 command.parse.failure=Could not parse {0} '{1}'
-dave.mute=$4Dave ztlumen, pamatujte, e d?leité podn?ty se budou stále ukazovat
-dave.reload=$1Dave znovu na?ten, ani by se n?co pokazilo, juch?!
-dave.suggestion.link.hover=$2Klikni pro otev?ení $1{0}
-dave.suggestion.link=Zde je uite?nı odkaz, $1{0}
-dave.trigger.header=$1Podn?ty
-dave.trigger.notfound=$4Podn?t s ID '{0}' neexistuje.
-dave.trigger.single.hover=$1Klikni pro vykonání podn?tu
-dave.unmute=$1Ztlumení Davea zrušeno
-discord.command.caught=Promi?, tento p?íkaz nelze spustit spustit. Prosím nahlaš to v našem kanálu podpory.
-discord.command.not.permitted=Nemáš povolení k pouívání tohoto p?íkazu!
-discord.command.unknown=Promi?, nevím co s tímto p?íkazem mám d?lat!
-hartshorn.confirm.invalid.source=$4Tento p?íkaz mohou pouít pouze identifikovatelné zdroje (hrá?i, konzole) spojující p?vodní zdroj p?íkazu
+dave.mute=$4Dave ztlumen, pamatujte, Å¾e dÅ¯leÅ¾itÃ© podnÄ›ty se budou stÃ¡le ukazovat
+dave.reload=$1Dave znovu naÄten, aniÅ¾ by se nÄ›co pokazilo, juchÅ¯!
+dave.suggestion.link.hover=$2Klikni pro otevÅ™enÃ­ $1{0}
+dave.suggestion.link=Zde je uÅ¾iteÄnÃ½ odkaz, $1{0}
+dave.trigger.header=$1PodnÄ›ty
+dave.trigger.notfound=$4PodnÄ›t s ID '{0}' neexistuje.
+dave.trigger.single.hover=$1Klikni pro vykonÃ¡nÃ­ podnÄ›tu
+dave.unmute=$1ZtlumenÃ­ Davea zruÅ¡eno
+discord.command.caught=PromiÅˆ, tento pÅ™Ã­kaz nelze spustit spustit. ProsÃ­m nahlaÅ¡ to v naÅ¡em kanÃ¡lu podpory.
+discord.command.not.permitted=NemÃ¡Å¡ povolenÃ­ k pouÅ¾Ã­vÃ¡nÃ­ tohoto pÅ™Ã­kazu!
+discord.command.unknown=PromiÅˆ, nevÃ­m co s tÃ­mto pÅ™Ã­kazem mÃ¡m dÄ›lat!
+hartshorn.confirm.invalid.source=$4Tento pÅ™Ã­kaz mohou pouÅ¾Ã­t pouze identifikovatelnÃ© zdroje (hrÃ¡Äi, konzole) spojujÃ­cÃ­ pÅ¯vodnÃ­ zdroj pÅ™Ã­kazu
 hartshorn.info.header=$2Hartshorn $3($1Version$3: $1{0}$3)
 hartshorn.info.service.hover=$2Detaily pro '$1{0}$2'
-hartshorn.info.service.unknown=$4Sluba s ID '{0}' nenalezena.
-hartshorn.info.services=$2Sluby$3:
-hartshorn.invalid.source=$4Tento p?íkaz mohou vyuívat jen hrá?i
+hartshorn.info.service.unknown=$4SluÅ¾ba s ID '{0}' nenalezena.
+hartshorn.info.services=$2SluÅ¾by$3:
+hartshorn.invalid.source=$4Tento pÅ™Ã­kaz mohou vyuÅ¾Ã­vat jen hrÃ¡Äi
 hartshorn.pagination.title=$1Hartshorn Server Info
-hartshorn.reload.all=$1Všechny sluby úsp?šn? znovu na?teny
-hartshorn.reload.single.fail=$4Op?tovné na?tení '{0}' selhalo.
-hartshorn.reload.single=$1Úsp?šn? znovu na?teno '$2{0}$1'
-hashtag.wrong_format=Schéma musí bıt formátováno jakoto #type[arg1][arg2][etc.]
-i18n.lang.updated.other=$1Jazyková p?edvolba pro $2{0} $1byla zm?n?na na: $2{1}
-i18n.lang.updated=$1Jazyková p?edvolba zm?n?na na: $2{0}
-minecraft.enchant.aquaaffinity=Jako ryba ve vod?
-minecraft.enchant.baneofarthopods=Zhouba ?lenovc?
-minecraft.enchant.binding=Kletba spoutání
+hartshorn.reload.all=$1VÅ¡echny sluÅ¾by ÃºspÄ›Å¡nÄ› znovu naÄteny
+hartshorn.reload.single.fail=$4OpÄ›tovnÃ© naÄtenÃ­ '{0}' selhalo.
+hartshorn.reload.single=$1ÃšspÄ›Å¡nÄ› znovu naÄteno '$2{0}$1'
+hashtag.wrong_format=SchÃ©ma musÃ­ bÃ½t formÃ¡tovÃ¡no jakoÅ¾to #type[arg1][arg2][etc.]
+i18n.lang.updated.other=$1JazykovÃ¡ pÅ™edvolba pro $2{0} $1byla zmÄ›nÄ›na na: $2{1}
+i18n.lang.updated=$1JazykovÃ¡ pÅ™edvolba zmÄ›nÄ›na na: $2{0}
+minecraft.enchant.aquaaffinity=Jako ryba ve vodÄ›
+minecraft.enchant.baneofarthopods=Zhouba ÄlenovcÅ¯
+minecraft.enchant.binding=Kletba spoutÃ¡nÃ­
 minecraft.enchant.depthstrider=Rychloplavec
-minecraft.enchant.efficiency=Ú?innost
-minecraft.enchant.featherfalling=Jako pírko
-minecraft.enchant.fireaspect=ár
-minecraft.enchant.flame=Ohnivé šípy
+minecraft.enchant.efficiency=ÃšÄinnost
+minecraft.enchant.featherfalling=Jako pÃ­rko
+minecraft.enchant.fireaspect=Å½Ã¡r
+minecraft.enchant.flame=OhnivÃ© Å¡Ã­py
 minecraft.enchant.fortune=Fortune
-minecraft.enchant.frostwalker=Mrazík
-minecraft.enchant.infinity=Nekone?nı toulec
-minecraft.enchant.knockback=Odraení
-minecraft.enchant.looting=Ko?ist
-minecraft.enchant.lure=Návnada
+minecraft.enchant.frostwalker=MrazÃ­k
+minecraft.enchant.infinity=NekoneÄnÃ½ toulec
+minecraft.enchant.knockback=OdraÅ¾enÃ­
+minecraft.enchant.looting=KoÅ™ist
+minecraft.enchant.lure=NÃ¡vnada
 minecraft.enchant.mending=Oprava
-minecraft.enchant.power=Síla
-minecraft.enchant.protection.blast=Ochrana p?ed vıbuchem
-minecraft.enchant.protection.fire=Ochrana p?ed ohn?m
-minecraft.enchant.protection.projectile=Ochrana p?ed st?elami
+minecraft.enchant.power=SÃ­la
+minecraft.enchant.protection.blast=Ochrana pÅ™ed vÃ½buchem
+minecraft.enchant.protection.fire=Ochrana pÅ™ed ohnÄ›m
+minecraft.enchant.protection.projectile=Ochrana pÅ™ed stÅ™elami
 minecraft.enchant.protection=Ochrana
-minecraft.enchant.punch=Úder
-minecraft.enchant.respiration=Dıchání
-minecraft.enchant.sealuck=Št?stí na mo?i
+minecraft.enchant.punch=Ãšder
+minecraft.enchant.respiration=DÃ½chÃ¡nÃ­
+minecraft.enchant.sealuck=Å tÄ›stÃ­ na moÅ™i
 minecraft.enchant.sharpness=Ostrost
 minecraft.enchant.silktouch=Silk Touch
-minecraft.enchant.smite=Údernost
+minecraft.enchant.smite=Ãšdernost
 minecraft.enchant.sweeping=Sweeping
 minecraft.enchant.thorns=Trny
-minecraft.enchant.unbreaking=Nezni?itelnost
-minecraft.enchant.vanishing=Kletba zmizení
-missing_args=Chyb?jící hodnoty.
-missing_converter=Parametr typu {0} nemá zaregistrovanı konvertor
-oldplots.caught.calculation=$4Nelze vypo?ítat polohu pozemku 
-oldplots.caught.location=$4Není nakonfigurována poloha pro '{0}'
-oldplots.caught.player=$4Platnı hrá? není k dispozici
-oldplots.caught.plot=$4Nenalezen pozemek s tímto ID
-oldplots.caught.worlds=$4Sv?ty nejsou uloeny jako OldPlots
+minecraft.enchant.unbreaking=NezniÄitelnost
+minecraft.enchant.vanishing=Kletba zmizenÃ­
+missing_args=ChybÄ›jÃ­cÃ­ hodnoty.
+missing_converter=Parametr typu {0} nemÃ¡ zaregistrovanÃ½ konvertor
+oldplots.caught.calculation=$4Nelze vypoÄÃ­tat polohu pozemku 
+oldplots.caught.location=$4NenÃ­ nakonfigurovÃ¡na poloha pro '{0}'
+oldplots.caught.player=$4PlatnÃ½ hrÃ¡Ä nenÃ­ k dispozici
+oldplots.caught.plot=$4Nenalezen pozemek s tÃ­mto ID
+oldplots.caught.worlds=$4SvÄ›ty nejsou uloÅ¾eny jako OldPlots
 oldplots.list.hover=$2Teleportovat na $1{0}$2, $1{1}, {2}
 oldplots.list.title=$1OldPlots pro $2{0}
-playeractions.lang.notify.hover=$1Klikni zde pro zm?nu jazykové p?edvolby na $2{0}
-playeractions.lang.notify=$1Budi pozdraven! Všimli jsme si, e preferuješ vid?t zprávy v {0}, pokud chceš, aby ti byly naše p?íkazy odesílány v {0} klikni na tuto zprávu pro zm?n?ní jazykové p?edvolby.
-playeractions.plot.denied=$4Na pozemek, na kterı se snaíš teleportovat, máš zákaz
-playeractions.plot.interact=$4Nemáš povolení zde ovládat entity
+playeractions.lang.notify.hover=$1Klikni zde pro zmÄ›nu jazykovÃ© pÅ™edvolby na $2{0}
+playeractions.lang.notify=$1BudiÅ¾ pozdraven! VÅ¡imli jsme si, Å¾e preferujeÅ¡ vidÄ›t zprÃ¡vy v {0}, pokud chceÅ¡, aby ti byly naÅ¡e pÅ™Ã­kazy odesÃ­lÃ¡ny v {0} klikni na tuto zprÃ¡vu pro zmÄ›nÄ›nÃ­ jazykovÃ© pÅ™edvolby.
+playeractions.plot.denied=$4Na pozemek, na kterÃ½ se snaÅ¾Ã­Å¡ teleportovat, mÃ¡Å¡ zÃ¡kaz
+playeractions.plot.interact=$4NemÃ¡Å¡ povolenÃ­ zde ovlÃ¡dat entity
 playeractions.plot.outside=$4Jsi mimo pozemek
-playeractions.rootworld=$4V tomto sv?t? nemáš povolení k pohybu
-playeractions.spectator.notallowed=$4V módu diváka není povolena teleportace
-source.unknown=Neznámı
-toolbinding.caught.block=Nástroj nelze nastavit na bloky
-toolbinding.caught.duplicate=Na tento p?edm?t u je nastaven nástroj
-toolbinding.caught.hand=Nástroj nelze nastavit na ruku
-worldmanagement.unloader.blacklist.added=$2{0} $1Byl p?idán na ?ernou listinu, na?tení tudí nebude rušeno
-worldmanagement.unloader.blacklist.failed=$2{0} $1Nelze dát na ?ernou listinu, jsi si jist, e existuje?
+playeractions.rootworld=$4V tomto svÄ›tÄ› nemÃ¡Å¡ povolenÃ­ k pohybu
+playeractions.spectator.notallowed=$4V mÃ³du divÃ¡ka nenÃ­ povolena teleportace
+source.unknown=NeznÃ¡mÃ½
+toolbinding.caught.block=NÃ¡stroj nelze nastavit na bloky
+toolbinding.caught.duplicate=Na tento pÅ™edmÄ›t uÅ¾ je nastaven nÃ¡stroj
+toolbinding.caught.hand=NÃ¡stroj nelze nastavit na ruku
+worldmanagement.unloader.blacklist.added=$2{0} $1Byl pÅ™idÃ¡n na Äernou listinu, naÄtenÃ­ tudÃ­Å¾ nebude ruÅ¡eno
+worldmanagement.unloader.blacklist.failed=$2{0} $1Nelze dÃ¡t na Äernou listinu, jsi si jist, Å¾e existuje?
