--- a/hartshorn-i18n/src/main/resources/hartshorn/batches/26062021/translations_fi.properties
+++ b/hartshorn-i18n/src/main/resources/hartshorn/batches/26062021/translations_fi.properties
@@ -16,7 +16,7 @@
 #
 
 caught.failedbinding=$4Cannot apply to this type
-caught.reference.lost=$4Viittaus tunnisteeseen) kadotettu caught.failedbinding=$4T‰t‰ esinett‰ ei voi k‰ytt‰‰ t‰h‰n
+caught.reference.lost=$4Viittaus tunnisteeseen) kadotettu caught.failedbinding=$4T√§t√§ esinett√§ ei voi k√§ytt√§√§ t√§h√§n
 caught=$4Tapahtui virhe. $3{0}
 command.confirm.hover=$1Confirm running command
 command.confirm=$1This command requires confirmation, click $2[here] $1to confirm
@@ -29,26 +29,26 @@ command.missing.handler=No supported command handler found for '{0}'
 command.overflow=$4Too many arguments
 command.parameter.missing.arguments=$4Not enough arguments for parameter '{0}'
 command.parse.failure=Could not parse {0} '{1}'
-dave.mute=$4Dave vaimennettu, huomaathan, ett‰ t‰rke‰t laukaisimet n‰kyv‰t siit‰ huolimatta aina
-dave.reload=$1Uudelleen ladattiin Dave hajottamatta mit‰‰n, Hurraa!
+dave.mute=$4Dave vaimennettu, huomaathan, ett√§ t√§rke√§t laukaisimet n√§kyv√§t siit√§ huolimatta aina
+dave.reload=$1Uudelleen ladattiin Dave hajottamatta mit√§√§n, Hurraa!
 dave.suggestion.link.hover=$2Paina avataksesi $1{0}
-dave.suggestion.link=T‰ss‰ on hyˆdyllinen linkki, $1{0}
+dave.suggestion.link=T√§ss√§ on hy√∂dyllinen linkki, $1{0}
 dave.trigger.header=$1Laukaisimet
-dave.trigger.notfound=$4Ei m‰‰ritetty‰ laukaisinta ID:ll‰ '{0}' .
+dave.trigger.notfound=$4Ei m√§√§ritetty√§ laukaisinta ID:ll√§ '{0}' .
 dave.trigger.single.hover=$1Paina suorittaaksesi laukaisin 
 dave.unmute=$1Poistettiin Daven vaimennus
-discord.command.caught=Pahoittelut, en kyennyt suorittamaan t‰t‰ komentoa. Ilmoitathan t‰st‰ tukikanavallamme. 
-discord.command.not.permitted=Oikeus k‰ytt‰‰ t‰t‰ komentoa puuttuu!
-discord.command.unknown=Pahoittelut, en tied‰ mit‰ tehd‰ t‰ll‰ komennolla!
-hartshorn.confirm.invalid.source=$4T‰m‰ komento on vain tunnistettavien l‰hteiden k‰ytˆss‰ (pelaajat, konsoli) jotka vastaavat alkuper‰isen komennon alkuper‰‰
+discord.command.caught=Pahoittelut, en kyennyt suorittamaan t√§t√§ komentoa. Ilmoitathan t√§st√§ tukikanavallamme. 
+discord.command.not.permitted=Oikeus k√§ytt√§√§ t√§t√§ komentoa puuttuu!
+discord.command.unknown=Pahoittelut, en tied√§ mit√§ tehd√§ t√§ll√§ komennolla!
+hartshorn.confirm.invalid.source=$4T√§m√§ komento on vain tunnistettavien l√§hteiden k√§yt√∂ss√§ (pelaajat, konsoli) jotka vastaavat alkuper√§isen komennon alkuper√§√§
 hartshorn.info.header=$2Hartshorn $3($1Versio$3: $1{0}$3)
 hartshorn.info.service.hover=$2Yksityiskohdat kohteelle '$1{0}$2'
 hartshorn.info.service.unknown=$4Could not find service with ID '{0}'
 hartshorn.info.services=$2Services$3:
-hartshorn.invalid.source=$4T‰t‰ komentoa voivat k‰ytt‰‰ vain pelaajat
+hartshorn.invalid.source=$4T√§t√§ komentoa voivat k√§ytt√§√§ vain pelaajat
 hartshorn.pagination.title=$1Hartshorn Palvelin Info
 hartshorn.reload.all=$1Successfully reloaded all services
-hartshorn.reload.single.fail=$4Uudelleenlataus ep‰onnistui '{0}'
+hartshorn.reload.single.fail=$4Uudelleenlataus ep√§onnistui '{0}'
 hartshorn.reload.single=$1Onnistuneesti Uudelleenladattiin '$2{0}$1'
 hashtag.wrong_format=Komento on ilmaistava seuraavasti: #type[arg1][arg2][etc.]
 i18n.lang.updated.other=$1Valittu kieli pelaajalle $2{0} $1on vaihdettu kieleksi: $2{1}
@@ -58,50 +58,50 @@ minecraft.enchant.baneofarthopods=Niveljalkaisten Kirous
 minecraft.enchant.binding=Sitoutumisen Kirous
 minecraft.enchant.depthstrider=Vesivipellys
 minecraft.enchant.efficiency=Tehokkuus
-minecraft.enchant.featherfalling=Hˆyhenenkevyt
-minecraft.enchant.fireaspect=Liekehtiv‰
+minecraft.enchant.featherfalling=H√∂yhenenkevyt
+minecraft.enchant.fireaspect=Liekehtiv√§
 minecraft.enchant.flame=Liekki
 minecraft.enchant.fortune=Onni
-minecraft.enchant.frostwalker=Pakkask‰velij‰
+minecraft.enchant.frostwalker=Pakkask√§velij√§
 minecraft.enchant.infinity=Loputtomuus
 minecraft.enchant.knockback=Raskas
-minecraft.enchant.looting=Ryˆstely
+minecraft.enchant.looting=Ry√∂stely
 minecraft.enchant.lure=Viehe
 minecraft.enchant.mending=Paikkaus
 minecraft.enchant.power=Voima
-minecraft.enchant.protection.blast=R‰j‰hdyssuojaus
+minecraft.enchant.protection.blast=R√§j√§hdyssuojaus
 minecraft.enchant.protection.fire=Tulisuojaus
 minecraft.enchant.protection.projectile=Ammussuojaus
 minecraft.enchant.protection=Suojaus
 minecraft.enchant.punch=Isku
 minecraft.enchant.respiration=Hengitys
 minecraft.enchant.sealuck=Meren Onni
-minecraft.enchant.sharpness=Ter‰vyys
+minecraft.enchant.sharpness=Ter√§vyys
 minecraft.enchant.silktouch=Silkkinen Kosketus
 minecraft.enchant.smite=Sivallus
-minecraft.enchant.sweeping=Kiit‰v‰ Reuna
-minecraft.enchant.thorns=Piikik‰s
+minecraft.enchant.sweeping=Kiit√§v√§ Reuna
+minecraft.enchant.thorns=Piikik√§s
 minecraft.enchant.unbreaking=Hajoamaton
 minecraft.enchant.vanishing=Katoamisen Kirous
 missing_args=Puuttuvia argumentteja.
-missing_converter=Parametri‰ muodossa {0} ei ole rekisterˆity muunnettavaksi
-oldplots.caught.calculation=$4Plotin sijaintia ei voitu m‰‰ritt‰‰
-oldplots.caught.location=$4Ei sijaintia m‰‰ritetty kohteelle '{0}'
-oldplots.caught.player=$4Kelvollista k‰ytt‰j‰nime‰ ei syˆtetty
-oldplots.caught.plot=$4Ei kyetty lˆyt‰m‰‰n plottia t‰ll‰ ID:ll‰
-oldplots.caught.worlds=$4Maailmoja ei s‰ilytet‰ nimell‰ OldPlots
+missing_converter=Parametri√§ muodossa {0} ei ole rekister√∂ity muunnettavaksi
+oldplots.caught.calculation=$4Plotin sijaintia ei voitu m√§√§ritt√§√§
+oldplots.caught.location=$4Ei sijaintia m√§√§ritetty kohteelle '{0}'
+oldplots.caught.player=$4Kelvollista k√§ytt√§j√§nime√§ ei sy√∂tetty
+oldplots.caught.plot=$4Ei kyetty l√∂yt√§m√§√§n plottia t√§ll√§ ID:ll√§
+oldplots.caught.worlds=$4Maailmoja ei s√§ilytet√§ nimell√§ OldPlots
 oldplots.list.hover=$2Teleporttaa kohteeseen $1{0}$2, $1{1}, {2}
-oldplots.list.title=$1K‰ytt‰j‰n $2{0} omistamat plotit kohteessa OldPlots
-playeractions.lang.notify.hover=$1Paina t‰st‰ vaihtaaksesi mieleiseksi kieleksesi $2{0}
-playeractions.lang.notify=$1Hei! Huomasimme ett‰ n‰et mieluiten viestisi kielell‰ {0}, jos haluat ett‰ l‰het‰mme viestit sinulle suomeksi paina t‰t‰ viesti‰.
-playeractions.plot.denied=$4P‰‰sysi plotille jolle yrit‰t teleportata on ev‰tty
-playeractions.plot.interact=$4Oikeutesi olla tekemisiss‰ t‰‰ll‰ olevien entiteettien kanssa on ev‰tty
+oldplots.list.title=$1K√§ytt√§j√§n $2{0} omistamat plotit kohteessa OldPlots
+playeractions.lang.notify.hover=$1Paina t√§st√§ vaihtaaksesi mieleiseksi kieleksesi $2{0}
+playeractions.lang.notify=$1Hei! Huomasimme ett√§ n√§et mieluiten viestisi kielell√§ {0}, jos haluat ett√§ l√§het√§mme viestit sinulle suomeksi paina t√§t√§ viesti√§.
+playeractions.plot.denied=$4P√§√§sysi plotille jolle yrit√§t teleportata on ev√§tty
+playeractions.plot.interact=$4Oikeutesi olla tekemisiss√§ t√§√§ll√§ olevien entiteettien kanssa on ev√§tty
 playeractions.plot.outside=$4Et ole plotilla
-playeractions.rootworld=$4Oikeutesi liikkua t‰ss‰ maailmassa on ev‰tty
+playeractions.rootworld=$4Oikeutesi liikkua t√§ss√§ maailmassa on ev√§tty
 playeractions.spectator.notallowed=$4Teleporttaaminen katsojatilassa ei ole sallittua
 source.unknown=Tuntematon
-toolbinding.caught.block=T‰t‰ tyˆkalua ei voi sitoa palikoihin
-toolbinding.caught.duplicate=T‰h‰n esineeseen on jo sidottu tyˆkalu
-toolbinding.caught.hand=T‰t‰ tyˆkalua ei voi sitoa k‰teen
+toolbinding.caught.block=T√§t√§ ty√∂kalua ei voi sitoa palikoihin
+toolbinding.caught.duplicate=T√§h√§n esineeseen on jo sidottu ty√∂kalu
+toolbinding.caught.hand=T√§t√§ ty√∂kalua ei voi sitoa k√§teen
 worldmanagement.unloader.blacklist.added=$2{0} $1pysyy nyt aktiivisena
-worldmanagement.unloader.blacklist.failed=$1Maailmaa $2{0} $1ei lˆytynyt, oletko varma ett‰ se on olemassa?
+worldmanagement.unloader.blacklist.failed=$1Maailmaa $2{0} $1ei l√∂ytynyt, oletko varma ett√§ se on olemassa?
