--- a/hartshorn-i18n/src/main/resources/hartshorn/batches/26062021/translations_fr.properties
+++ b/hartshorn-i18n/src/main/resources/hartshorn/batches/26062021/translations_fr.properties
@@ -15,8 +15,8 @@
 # along with this library. If not, see {@literal<http://www.gnu.org/licenses/>}.
 #
 
-caught.failedbinding=$4Ne peut s'appliquer à ce genre
-caught.reference.lost=$4Référence d'objet perdue
+caught.failedbinding=$4Ne peut s'appliquer Ã  ce genre
+caught.reference.lost=$4RÃ©fÃ©rence d'objet perdue
 caught=$4une erreur s'est produite. $3{0}
 command.confirm.hover=$1Confirm running command
 command.confirm=$1This command requires confirmation, click $2[here] $1to confirm
@@ -29,44 +29,44 @@ command.missing.handler=No supported command handler found for '{0}'
 command.overflow=$4Too many arguments
 command.parameter.missing.arguments=$4Not enough arguments for parameter '{0}'
 command.parse.failure=Could not parse {0} '{1}'
-dave.mute=$4Dave est maintenant muet, notez que les déclencheurs importants s'afficheront toujours
-dave.reload=$1Hourra,Dave a rechargé sans erreur !
+dave.mute=$4Dave est maintenant muet, notez que les dÃ©clencheurs importants s'afficheront toujours
+dave.reload=$1Hourra,Dave a rechargÃ© sans erreur !
 dave.suggestion.link.hover=$2Cliquez pour ouvrir $1{0}
 dave.suggestion.link=Voici un lien utile, $1{0}
-dave.trigger.header=$1Déclencheurs
-dave.trigger.notfound=$4Le déclencheur avec cet ID '{0}' n'existe pas
-dave.trigger.single.hover=$1Cliquez pour exécuter le déclencheur
-dave.unmute=$1Dave est réactivé
+dave.trigger.header=$1DÃ©clencheurs
+dave.trigger.notfound=$4Le dÃ©clencheur avec cet ID '{0}' n'existe pas
+dave.trigger.single.hover=$1Cliquez pour exÃ©cuter le dÃ©clencheur
+dave.unmute=$1Dave est rÃ©activÃ©
 discord.command.caught=Sorry, I could not start that command. Please report this in our support channel.
 discord.command.not.permitted=Vous n'avez pas la permission d'utiliser cette commande !
-discord.command.unknown=Désolé, je ne sais que faire de cette commande
-hartshorn.confirm.invalid.source=$4Cette commande ne peut être utilisée que par des sources identifiables (lecteurs, consoles) qui correspondent à la source d'origine
+discord.command.unknown=DÃ©solÃ©, je ne sais que faire de cette commande
+hartshorn.confirm.invalid.source=$4Cette commande ne peut Ãªtre utilisÃ©e que par des sources identifiables (lecteurs, consoles) qui correspondent Ã  la source d'origine
 hartshorn.info.header=$2Hartshorn $3($1Version$3: $1{0}$3)
 hartshorn.info.service.hover=$2Details for '$1{0}$2'
 hartshorn.info.service.unknown=$4Could not find service with ID '{0}'
 hartshorn.info.services=$2Services$3:
-hartshorn.invalid.source=$4Cette commande ne peut être utilisée que par les joueurs
+hartshorn.invalid.source=$4Cette commande ne peut Ãªtre utilisÃ©e que par les joueurs
 hartshorn.pagination.title=$1Hartshorn Server Info
-hartshorn.reload.all=$1Tous les modules ont été rechargés avec succès
-hartshorn.reload.single.fail=$4Échec du rechargement '{0}'
-hartshorn.reload.single=$1Rechargé avec succès '$2{0}$1'
-hashtag.wrong_format=Le motif doit être formaté comme #type[arg1][arg2][etc.]
-i18n.lang.updated.other=$1La langue de préférence pour $2{0} $1à été mise à jour par: $2{1}
-i18n.lang.updated=$1Votre langue de préférence à été mise à jour par: $2{0}
-minecraft.enchant.aquaaffinity=Affinité aquatique
-minecraft.enchant.baneofarthopods=Fléau des arthropodes
-minecraft.enchant.binding=Malédiction du lien éternel
-minecraft.enchant.depthstrider=Agilité aquatique
-minecraft.enchant.efficiency=Efficacité
+hartshorn.reload.all=$1Tous les modules ont Ã©tÃ© rechargÃ©s avec succÃ¨s
+hartshorn.reload.single.fail=$4Ã‰chec du rechargement '{0}'
+hartshorn.reload.single=$1RechargÃ© avec succÃ¨s '$2{0}$1'
+hashtag.wrong_format=Le motif doit Ãªtre formatÃ© comme #type[arg1][arg2][etc.]
+i18n.lang.updated.other=$1La langue de prÃ©fÃ©rence pour $2{0} $1Ã  Ã©tÃ© mise Ã  jour par: $2{1}
+i18n.lang.updated=$1Votre langue de prÃ©fÃ©rence Ã  Ã©tÃ© mise Ã  jour par: $2{0}
+minecraft.enchant.aquaaffinity=AffinitÃ© aquatique
+minecraft.enchant.baneofarthopods=FlÃ©au des arthropodes
+minecraft.enchant.binding=MalÃ©diction du lien Ã©ternel
+minecraft.enchant.depthstrider=AgilitÃ© aquatique
+minecraft.enchant.efficiency=EfficacitÃ©
 minecraft.enchant.featherfalling=Chute amortie
 minecraft.enchant.fireaspect=Aura de feu
-minecraft.enchant.flame=%1$s a péri dans les flammes
+minecraft.enchant.flame=%1$s a pÃ©ri dans les flammes
 minecraft.enchant.fortune=Fortune
 minecraft.enchant.frostwalker=Semelles givrantes
-minecraft.enchant.infinity=Infinité
+minecraft.enchant.infinity=InfinitÃ©
 minecraft.enchant.knockback=Recul
 minecraft.enchant.looting=Butin
-minecraft.enchant.lure=Appât
+minecraft.enchant.lure=AppÃ¢t
 minecraft.enchant.mending=Raccommodage
 minecraft.enchant.power=Puissance
 minecraft.enchant.protection.blast=Protection contre les explosions
@@ -74,34 +74,34 @@ minecraft.enchant.protection.fire=Protection contre le feu
 minecraft.enchant.protection.projectile=Protection contre les projectiles
 minecraft.enchant.protection=Protection
 minecraft.enchant.punch=Frappe
-minecraft.enchant.respiration=Apnée
+minecraft.enchant.respiration=ApnÃ©e
 minecraft.enchant.sealuck=Chance de la mer
 minecraft.enchant.sharpness=Tranchant
 minecraft.enchant.silktouch=Toucher de soie
-minecraft.enchant.smite=Châtiment
+minecraft.enchant.smite=ChÃ¢timent
 minecraft.enchant.sweeping=Affilage
-minecraft.enchant.thorns=Épines
-minecraft.enchant.unbreaking=Solidité
-minecraft.enchant.vanishing=Malédiction de disparition
+minecraft.enchant.thorns=Ã‰pines
+minecraft.enchant.unbreaking=SoliditÃ©
+minecraft.enchant.vanishing=MalÃ©diction de disparition
 missing_args=Pas assez d'arguments.
-missing_converter=Paramètre de type {0} n'a pas de convertisseur enregistré
+missing_converter=ParamÃ¨tre de type {0} n'a pas de convertisseur enregistrÃ©
 oldplots.caught.calculation=$4Impossible de calculer l'emplacement du plot
-oldplots.caught.location=$4Aucun emplacement dans le monde n'a été défini pour'{0}'
+oldplots.caught.location=$4Aucun emplacement dans le monde n'a Ã©tÃ© dÃ©fini pour'{0}'
 oldplots.caught.player=$4Le nom de joueur fourni n'est pas valide
-oldplots.caught.plot=$4Aucun plot avec cet ID n'a été trouvé
-oldplots.caught.worlds=$4Les mondes ne sont pas stockés en tant qu’anciens plots
-oldplots.list.hover=$2Téléportation vers $1{0}$2, $1{1}, {2}
+oldplots.caught.plot=$4Aucun plot avec cet ID n'a Ã©tÃ© trouvÃ©
+oldplots.caught.worlds=$4Les mondes ne sont pas stockÃ©s en tant quâ€™anciens plots
+oldplots.list.hover=$2TÃ©lÃ©portation vers $1{0}$2, $1{1}, {2}
 oldplots.list.title=$1Ancients plot pour $2{0}
-playeractions.lang.notify.hover=$1Cliquez ici pour changer votre préférence de langue en  $2{0}
-playeractions.lang.notify=$1Salut! Nous avons détecté que vous préférez voir les messages en  {0}, si vous souhaitez que nos commandes vous envoient des messages en{0}cliquez sur ce message pour changer la langue d'affichage. 
-playeractions.plot.denied=$4L'accès au plot auquel vous tentez de vous téléporter vous est refusé
-playeractions.plot.interact=$4Vous n'êtes pas autorisé à interagir avec les entités ici
-playeractions.plot.outside=$4Vous êtes en dehors d'un plot
-playeractions.rootworld=$4Vous n'avez pas la permission de vous déplacer dans ce monde
-playeractions.spectator.notallowed=$4Vous n'êtes pas autorisé à vous téléporter en mode spectateur
+playeractions.lang.notify.hover=$1Cliquez ici pour changer votre prÃ©fÃ©rence de langue en  $2{0}
+playeractions.lang.notify=$1Salut! Nous avons dÃ©tectÃ© que vous prÃ©fÃ©rez voir les messages en  {0}, si vous souhaitez que nos commandes vous envoient des messages en{0}cliquez sur ce message pour changer la langue d'affichage. 
+playeractions.plot.denied=$4L'accÃ¨s au plot auquel vous tentez de vous tÃ©lÃ©porter vous est refusÃ©
+playeractions.plot.interact=$4Vous n'Ãªtes pas autorisÃ© Ã  interagir avec les entitÃ©s ici
+playeractions.plot.outside=$4Vous Ãªtes en dehors d'un plot
+playeractions.rootworld=$4Vous n'avez pas la permission de vous dÃ©placer dans ce monde
+playeractions.spectator.notallowed=$4Vous n'Ãªtes pas autorisÃ© Ã  vous tÃ©lÃ©porter en mode spectateur
 source.unknown=Inconnue
-toolbinding.caught.block=L'outil ne peut être lié à des blocs
-toolbinding.caught.duplicate=Un outil lié à cet élément existe déjà
-toolbinding.caught.hand=L'outil ne peut être lié à la main
-worldmanagement.unloader.blacklist.added=$2{0} $1a été ajouté à la liste noire et ne sera pas déchargé
-worldmanagement.unloader.blacklist.failed=$2{0} $1N'a pas pu petre mis sur liste noir, êtes-vous sûr de son existence?
+toolbinding.caught.block=L'outil ne peut Ãªtre liÃ© Ã  des blocs
+toolbinding.caught.duplicate=Un outil liÃ© Ã  cet Ã©lÃ©ment existe dÃ©jÃ 
+toolbinding.caught.hand=L'outil ne peut Ãªtre liÃ© Ã  la main
+worldmanagement.unloader.blacklist.added=$2{0} $1a Ã©tÃ© ajoutÃ© Ã  la liste noire et ne sera pas dÃ©chargÃ©
+worldmanagement.unloader.blacklist.failed=$2{0} $1N'a pas pu petre mis sur liste noir, Ãªtes-vous sÃ»r de son existence?
