--- a/hartshorn-i18n/src/main/resources/hartshorn/batches/26062021/translations_nl.properties
+++ b/hartshorn-i18n/src/main/resources/hartshorn/batches/26062021/translations_nl.properties
@@ -57,7 +57,7 @@ minecraft.enchant.aquaaffinity=Hydrofiel
 minecraft.enchant.baneofarthopods=Verderf der geleedpotigen
 minecraft.enchant.binding=Vloek der binding
 minecraft.enchant.depthstrider=Waterloper
-minecraft.enchant.efficiency=Efficiëntie
+minecraft.enchant.efficiency=EfficiÃ«ntie
 minecraft.enchant.featherfalling=Vederzacht vallen
 minecraft.enchant.fireaspect=Vuuraspect
 minecraft.enchant.flame=Vlam
@@ -75,7 +75,7 @@ minecraft.enchant.protection.projectile=Projectielbescherming
 minecraft.enchant.protection=Bescherming
 minecraft.enchant.punch=Terugstoot
 minecraft.enchant.respiration=Ademhaling
-minecraft.enchant.sealuck=Geluk der zeeën
+minecraft.enchant.sealuck=Geluk der zeeÃ«n
 minecraft.enchant.sharpness=Scherpte
 minecraft.enchant.silktouch=Zijden streling
 minecraft.enchant.smite=Kastijding
