--- a/hartshorn-i18n/src/main/resources/hartshorn/batches/26062021/translations_ru.properties
+++ b/hartshorn-i18n/src/main/resources/hartshorn/batches/26062021/translations_ru.properties
@@ -15,9 +15,9 @@
 # along with this library. If not, see {@literal<http://www.gnu.org/licenses/>}.
 #
 
-caught.failedbinding=$4?????? ????????? ? ????? ????
-caught.reference.lost=$?????? ?? ?????? ????????
-caught=$????????? ??????. $3{0}
+caught.failedbinding=$4Нельзя применить к этому типу
+caught.reference.lost=$Ссылка на объект потерена
+caught=$Произошла ошибка. $3{0}
 command.confirm.hover=$1Confirm running command
 command.confirm=$1This command requires confirmation, click $2[here] $1to confirm
 command.cooldown=You are in cooldown
@@ -29,79 +29,79 @@ command.missing.handler=No supported command handler found for '{0}'
 command.overflow=$4Too many arguments
 command.parameter.missing.arguments=$4Not enough arguments for parameter '{0}'
 command.parse.failure=Could not parse {0} '{1}'
-dave.mute=$4???? ?????????, ?? ?????? ? ????, ??? ?????? ???????? ?????? ????? ?????
-dave.reload=$1????  ??? ???????????? ? ?????? ?? ?????????, ???!
-dave.suggestion.link.hover=$2???????, ????? ??????? $1{0}
-dave.suggestion.link=??? ???????? ??????, $1{0}
-dave.trigger.header=$1????????
-dave.trigger.notfound=$4?? ?????????? ???????? ? ID '{0}'.
-dave.trigger.single.hover=$1???????, ????? ????????? ???????
-dave.unmute=$1?? ?????? ??????? ???????? ????????? ?? ?????
-discord.command.caught=????????, ? ?? ???? ????????? ??? ???????. ?????????? ???????? ? ??? ????? ?????????, Support.
-discord.command.not.permitted=??? ?? ????????? ???????????? ??? ???????!
-discord.command.unknown=????????, ? ?? ???? ??? ???????!
-hartshorn.confirm.invalid.source=$4??? ??????? ????? ???? ???????????? ?????? ????????????? ??????????? (??????, ???????) ???????????? ???????????? ????????? ???????
-hartshorn.info.header=$2Hartshorn $3($1??????$3: $1{0}$3)
-hartshorn.info.service.hover=$2??????????? ??? '$1{0}$2'
-hartshorn.info.service.unknown=$4?? ??????? ????? ?????? ? ID '{0}'
-hartshorn.info.services=$2??????$3:
-hartshorn.invalid.source=$4??? ??????? ????? ???? ???????????? ?????? ????????
+dave.mute=$4Дэйв приглушен, но имейте в виду, что важные триггеры всегда будут видны
+dave.reload=$1Дэйв  был перезагружен и ничего не сломалось, ура!
+dave.suggestion.link.hover=$2Нажмите, чтобы открыть $1{0}
+dave.suggestion.link=Вот полезная ссылка, $1{0}
+dave.trigger.header=$1Триггеры
+dave.trigger.notfound=$4Не существует триггера с ID '{0}'.
+dave.trigger.single.hover=$1Нажмите, чтобы выполнить триггер
+dave.unmute=$1Вы теперь сможете получать сообщения от Дэйва
+discord.command.caught=Извините, я не смог запустить эту команду. Пожалуйсто сообщите в наш канал поддержки, Support.
+discord.command.not.permitted=Вам не разрешено использовать эту команду!
+discord.command.unknown=Извините, я не знаю эту команду!
+hartshorn.confirm.invalid.source=$4Эта команда может быть использована только опознаваемыми источниками (игроки, консоль) соответствуя изначальному источнику команды
+hartshorn.info.header=$2Hartshorn $3($1Версия$3: $1{0}$3)
+hartshorn.info.service.hover=$2Подробности для '$1{0}$2'
+hartshorn.info.service.unknown=$4Не удалось найти услугу с ID '{0}'
+hartshorn.info.services=$2Услуги$3:
+hartshorn.invalid.source=$4Эта команда может быть использована только игроками
 hartshorn.pagination.title=$1Hartshorn Server Info
-hartshorn.reload.all=$1??? ?????? ??????? ????????????? 
-hartshorn.reload.single.fail=$4?? ??????? ????????????? '{0}'
-hartshorn.reload.single=$1??????? ???????????? '$2{0}$1'
-hashtag.wrong_format=??????? ?????? ???? ???????????? ??? #type[arg1][arg2][etc.]
-i18n.lang.updated.other=$1???? ?????? $2{0} $1??? ?????????? ??: $2{1}
-i18n.lang.updated=$1??? ????????????? ???? ??? ?????????? ??: $2{0}
-minecraft.enchant.aquaaffinity=??????? ? ????? 
-minecraft.enchant.baneofarthopods=??? ?????????????
-minecraft.enchant.binding=????????? ??????
-minecraft.enchant.depthstrider=????????? ??????
-minecraft.enchant.efficiency=?????????????
-minecraft.enchant.featherfalling=??????????? 
-minecraft.enchant.fireaspect=??????? ???? 
-minecraft.enchant.flame=?????????????
-minecraft.enchant.fortune=?????
-minecraft.enchant.frostwalker=?????? ?? ???? 
-minecraft.enchant.infinity=?????????????
-minecraft.enchant.knockback=????????????
-minecraft.enchant.looting=??????
-minecraft.enchant.lure=????????
-minecraft.enchant.mending=???????
-minecraft.enchant.power=????
-minecraft.enchant.protection.blast=??????????????????
-minecraft.enchant.protection.fire=?????????????
-minecraft.enchant.protection.projectile=?????? ?? ????????
-minecraft.enchant.protection=??????
-minecraft.enchant.punch=???????????
-minecraft.enchant.respiration=????????? ???????
-minecraft.enchant.sealuck=??????? ?????
-minecraft.enchant.sharpness=???????
-minecraft.enchant.silktouch=???????? ???????
-minecraft.enchant.smite=???????? ???? 
-minecraft.enchant.sweeping=??????? ??????
-minecraft.enchant.thorns=????
-minecraft.enchant.unbreaking=?????????
-minecraft.enchant.vanishing=????????? ???????????? 
-missing_args=?? ?????????? ??????????.
-missing_converter=? ????????? ???? {0} ??? ??????????????????? ???????????????
-oldplots.caught.calculation=$4?? ??????? ????????? ?????????????? ??????? 
-oldplots.caught.location=$4??????? ??????? ???? ?? ????????? ??? '{0}'
-oldplots.caught.player=$4?? ???????????? ?????????????? ?????
-oldplots.caught.plot=$4?? ??????? ????? ??????? ? ???? ID 
-oldplots.caught.worlds=$4???? ?? ???????? ??? OldPlots
-oldplots.list.hover=$2???????????????? ? $1{0}$2, $1{1}, {2}
-oldplots.list.title=$1OldPlots ??? $2{0}
-playeractions.lang.notify.hover=$1??????? ????, ????? ???????? ??? ?????????????? ???? ?? $2{0}
-playeractions.lang.notify=$1??????! ?? ??????????, ??? ?? ????????????? ????????????? ????????? ? {0}, ???? ?? ?? ??????, ??? ?? ???? ??????? ?????????? ??? ????????? ? {0}, ??????? ?? ??? ????????? ????? ???????? ??? ?????????????? ????.
-playeractions.plot.denied=$4??? ???? ???????? ? ????????? ???????, ?? ??????? ?? ????????????????
-playeractions.plot.interact=$4????? ?? ?? ?????? ????????????????? ? ??????????
-playeractions.plot.outside=$4?? ??? ???????
-playeractions.rootworld=$4??? ?? ????????? ??????????? ? ???? ????
-playeractions.spectator.notallowed=$4?? ?? ?????? ???????????????? ? ?????? ???????????
-source.unknown=??????????
-toolbinding.caught.block=?????? ?? ????? ???? ????????? ? ??????
-toolbinding.caught.duplicate=? ????? ???????? ??? ???? ???????? ? ??????
-toolbinding.caught.hand=?????? ?? ????? ???? ????????? ? ????
-worldmanagement.unloader.blacklist.added=$2{0} $1??? ???????? ? ?????? ?????? ? ?????? ????? ????????
-worldmanagement.unloader.blacklist.failed=$2{0} $1?? ????? ???? ???????? ? ?????? ??????, ?? ???????, ??? ??? ???????????
+hartshorn.reload.all=$1Все услуги успешно перезагружены 
+hartshorn.reload.single.fail=$4Не удалось перезагрузить '{0}'
+hartshorn.reload.single=$1Успешно перезагружен '$2{0}$1'
+hashtag.wrong_format=Паттерн должен быть форматирован как #type[arg1][arg2][etc.]
+i18n.lang.updated.other=$1Язык игрока $2{0} $1был переключен на: $2{1}
+i18n.lang.updated=$1Ваш предпочтенный язык был переключен на: $2{0}
+minecraft.enchant.aquaaffinity=Родство с водой 
+minecraft.enchant.baneofarthopods=Бич членистоногих
+minecraft.enchant.binding=Проклятие утраты
+minecraft.enchant.depthstrider=Подводная ходьба
+minecraft.enchant.efficiency=Эввективность
+minecraft.enchant.featherfalling=Невесомость 
+minecraft.enchant.fireaspect=Заговор огня 
+minecraft.enchant.flame=Воспламенение
+minecraft.enchant.fortune=Удача
+minecraft.enchant.frostwalker=Ходьба по воде 
+minecraft.enchant.infinity=Бесконечность
+minecraft.enchant.knockback=Отбрасывание
+minecraft.enchant.looting=Добыча
+minecraft.enchant.lure=Приманка
+minecraft.enchant.mending=Починка
+minecraft.enchant.power=Сила
+minecraft.enchant.protection.blast=Взрывоустойчивость
+minecraft.enchant.protection.fire=Огнестойкость
+minecraft.enchant.protection.projectile=Защита от снарядов
+minecraft.enchant.protection=Защита
+minecraft.enchant.punch=Откидывание
+minecraft.enchant.respiration=Подводное дыхание
+minecraft.enchant.sealuck=Морская удача
+minecraft.enchant.sharpness=Острота
+minecraft.enchant.silktouch=Шелковое касание
+minecraft.enchant.smite=Небесная кара 
+minecraft.enchant.sweeping=Разящий клинок
+minecraft.enchant.thorns=Шипы
+minecraft.enchant.unbreaking=Прочность
+minecraft.enchant.vanishing=Проклятие исчезновения 
+missing_args=Не достаточно параметров.
+missing_converter=У параметра типа {0} нет зарегестрированного преобразователя
+oldplots.caught.calculation=$4Не удалось вычислить местоположения участка 
+oldplots.caught.location=$4Никакая локация мира не настроена для '{0}'
+oldplots.caught.player=$4Не предоставлен действительный игрок
+oldplots.caught.plot=$4Не удалось найти участок с этим ID 
+oldplots.caught.worlds=$4Миры не хранятся как OldPlots
+oldplots.list.hover=$2Телепортироватся к $1{0}$2, $1{1}, {2}
+oldplots.list.title=$1OldPlots для $2{0}
+playeractions.lang.notify.hover=$1Нажмите сюда, чтобы изменить ваш предпочитаемый язык на $2{0}
+playeractions.lang.notify=$1Привет! Мы установили, что вы предпочитаете просматривать сообщения в {0}, если вы бы хотели, что бы наши команды отправляли вам сообщения в {0}, нажмите на это сообщение чтобы изменить ваш предпочитаемый язык.
+playeractions.plot.denied=$4Вам было отказано в посещении участка, на который вы телепортируетесь
+playeractions.plot.interact=$4Здесь вы не можете взаимодействовать с сущностями
+playeractions.plot.outside=$4Вы вне участка
+playeractions.rootworld=$4Вам не разрешено перемещатся в этом мире
+playeractions.spectator.notallowed=$4Вы не можете телепортироватся в режиме наблюдателя
+source.unknown=Неизвестно
+toolbinding.caught.block=Орудие не может быть привязоно к блокам
+toolbinding.caught.duplicate=У этого предмета уже есть привязка к орудию
+toolbinding.caught.hand=Орудие не может быть привязано к руке
+worldmanagement.unloader.blacklist.added=$2{0} $1был добавлен в черный список и всегда будет загружен
+worldmanagement.unloader.blacklist.failed=$2{0} $1не может быть занесено в черный список, вы уверены, что оно существует?
