--- a/hartshorn-i18n/src/main/resources/hartshorn/batches/26062021/translations_sv.properties
+++ b/hartshorn-i18n/src/main/resources/hartshorn/batches/26062021/translations_sv.properties
@@ -15,8 +15,8 @@
 # along with this library. If not, see {@literal<http://www.gnu.org/licenses/>}.
 #
 
-caught.failedbinding=$4Kan inte gälla för den här typen
-caught.reference.lost=$4Hänvisning till förlorat objekt
+caught.failedbinding=$4Kan inte gÃ¤lla fÃ¶r den hÃ¤r typen
+caught.reference.lost=$4HÃ¤nvisning till fÃ¶rlorat objekt
 caught=$4An error occurred. $3{0}
 command.confirm.hover=$1Confirm running command
 command.confirm=$1This command requires confirmation, click $2[here] $1to confirm
@@ -29,41 +29,41 @@ command.missing.handler=No supported command handler found for '{0}'
 command.overflow=$4Too many arguments
 command.parameter.missing.arguments=$4Not enough arguments for parameter '{0}'
 command.parse.failure=Could not parse {0} '{1}'
-dave.mute=$4Mutade Dave, notera att viktiga utlösare alltid kommer att visas
+dave.mute=$4Mutade Dave, notera att viktiga utlÃ¶sare alltid kommer att visas
 dave.reload=$1Laddade om Dave utan att bryta saker, Jippie!
-dave.suggestion.link.hover=$2Klicka för att öppna $1{0}
-dave.suggestion.link=Här är en användbar länk, $1{0}
-dave.trigger.header=$1Utlösare
-dave.trigger.notfound=$4Ingen utlösare med id '{0}' existerar.
-dave.trigger.single.hover=$1Klicka för att utföra utlöåsaren
-dave.unmute=$1Slog tillbaka ljudet på Dave
-discord.command.caught=Jag kunde tyvärr inte starta det kommandot. Rapportera detta i vår supportkanal.
-discord.command.not.permitted=Du har inte åtkomst till det kommadot!
-discord.command.unknown=Tyvärr, jag vet inte vad jag ska göra med det kommandot!
-hartshorn.confirm.invalid.source=$4Detta kommando kan endast användas av identifierbara källor (spelare, konsol) som matchar den ursprungliga källan för kommandot
+dave.suggestion.link.hover=$2Klicka fÃ¶r att Ã¶ppna $1{0}
+dave.suggestion.link=HÃ¤r Ã¤r en anvÃ¤ndbar lÃ¤nk, $1{0}
+dave.trigger.header=$1UtlÃ¶sare
+dave.trigger.notfound=$4Ingen utlÃ¶sare med id '{0}' existerar.
+dave.trigger.single.hover=$1Klicka fÃ¶r att utfÃ¶ra utlÃ¶Ã¥saren
+dave.unmute=$1Slog tillbaka ljudet pÃ¥ Dave
+discord.command.caught=Jag kunde tyvÃ¤rr inte starta det kommandot. Rapportera detta i vÃ¥r supportkanal.
+discord.command.not.permitted=Du har inte Ã¥tkomst till det kommadot!
+discord.command.unknown=TyvÃ¤rr, jag vet inte vad jag ska gÃ¶ra med det kommandot!
+hartshorn.confirm.invalid.source=$4Detta kommando kan endast anvÃ¤ndas av identifierbara kÃ¤llor (spelare, konsol) som matchar den ursprungliga kÃ¤llan fÃ¶r kommandot
 hartshorn.info.header=$2Hartshorn $3($1Version$3: $1{0}$3)
-hartshorn.info.service.hover=$2Detaljer för '$1{0}$2'
-hartshorn.info.service.unknown=$4Kunde inte hitta tjänsten med ID '{0}'
+hartshorn.info.service.hover=$2Detaljer fÃ¶r '$1{0}$2'
+hartshorn.info.service.unknown=$4Kunde inte hitta tjÃ¤nsten med ID '{0}'
 hartshorn.info.services=$2Services$3:
-hartshorn.invalid.source=$4Detta kommando kan endast användas av spelare
+hartshorn.invalid.source=$4Detta kommando kan endast anvÃ¤ndas av spelare
 hartshorn.pagination.title=$1Hartshorn Server Informartion
-hartshorn.reload.all=$1Alla tjänster har laddats om
+hartshorn.reload.all=$1Alla tjÃ¤nster har laddats om
 hartshorn.reload.single.fail=$4Det gick inte att ladda om '{0}'
 hartshorn.reload.single=$1Lyckades med omladdningen '$2{0}$1'
-hashtag.wrong_format=Mönster måste formateras som #type[arg1][arg2][etc.]
-i18n.lang.updated.other=$1Språkpreferensen för $2{0} $1har ändrats till: $2{1}
-i18n.lang.updated=$1Ditt föredragna språk har byts till: $2{0}
+hashtag.wrong_format=MÃ¶nster mÃ¥ste formateras som #type[arg1][arg2][etc.]
+i18n.lang.updated.other=$1SprÃ¥kpreferensen fÃ¶r $2{0} $1har Ã¤ndrats till: $2{1}
+i18n.lang.updated=$1Ditt fÃ¶redragna sprÃ¥k har byts till: $2{0}
 minecraft.enchant.aquaaffinity=Vattenvana
-minecraft.enchant.baneofarthopods=Leddjurens skräck
-minecraft.enchant.binding=Bindningsförbannelse
-minecraft.enchant.depthstrider=Djupgående
+minecraft.enchant.baneofarthopods=Leddjurens skrÃ¤ck
+minecraft.enchant.binding=BindningsfÃ¶rbannelse
+minecraft.enchant.depthstrider=DjupgÃ¥ende
 minecraft.enchant.efficiency=Effektivitet
-minecraft.enchant.featherfalling=Fjäderfall
+minecraft.enchant.featherfalling=FjÃ¤derfall
 minecraft.enchant.fireaspect=Eldkraft
 minecraft.enchant.flame=Flamma
 minecraft.enchant.fortune=Rikedom
-minecraft.enchant.frostwalker=Frostgående
-minecraft.enchant.infinity=Oändlig
+minecraft.enchant.frostwalker=FrostgÃ¥ende
+minecraft.enchant.infinity=OÃ¤ndlig
 minecraft.enchant.knockback=Knuff
 minecraft.enchant.looting=Plundring
 minecraft.enchant.lure=Bete
@@ -76,32 +76,32 @@ minecraft.enchant.protection=Skydd
 minecraft.enchant.punch=Slag
 minecraft.enchant.respiration=Andning
 minecraft.enchant.sealuck=Fiskelycka
-minecraft.enchant.sharpness=Skärpa
+minecraft.enchant.sharpness=SkÃ¤rpa
 minecraft.enchant.silktouch=Silkesvante
 minecraft.enchant.smite=Heligt
-minecraft.enchant.sweeping=Svepande svärdsegg
+minecraft.enchant.sweeping=Svepande svÃ¤rdsegg
 minecraft.enchant.thorns=Taggar
-minecraft.enchant.unbreaking=Oförstörbar
-minecraft.enchant.vanishing=Försvinnandets förbannelse
-missing_args=Inte tillräckligt med argument.
+minecraft.enchant.unbreaking=OfÃ¶rstÃ¶rbar
+minecraft.enchant.vanishing=FÃ¶rsvinnandets fÃ¶rbannelse
+missing_args=Inte tillrÃ¤ckligt med argument.
 missing_converter=Parameter av typ {0} har ingen registrerad omvandlare
-oldplots.caught.calculation=$4Det gick inte att beräkna plotplacering
-oldplots.caught.location=$4ingen plats konfigurerades för '{0}'
-oldplots.caught.player=$4Ingen giltig spelare tillhandahålls
+oldplots.caught.calculation=$4Det gick inte att berÃ¤kna plotplacering
+oldplots.caught.location=$4ingen plats konfigurerades fÃ¶r '{0}'
+oldplots.caught.player=$4Ingen giltig spelare tillhandahÃ¥lls
 oldplots.caught.plot=$4Ingen plot med detta ID hittades
-oldplots.caught.worlds=$4Världar lagras inte some GamlaPlots
+oldplots.caught.worlds=$4VÃ¤rldar lagras inte some GamlaPlots
 oldplots.list.hover=$2Teleporteras till $1{0}$2, $1{1}, {2}
-oldplots.list.title=$1Gamla plots för $2{0}
-playeractions.lang.notify.hover=$1Klicka här för att ändra din språkinställning till $2{0}
-playeractions.lang.notify=$1Hallå där! Vi upptäckte att du föredrar att se meddelanden i {0}, Om du föredrar att våra commandon sickar dig meddelanden på {0} Klicka på det här meddelandet för att ändra språk preferenser.
-playeractions.plot.denied=$4Du nekas att besöka den plot du teleporterar till
-playeractions.plot.interact=$4Du har inte behörighet att interagera med enheterna här
-playeractions.plot.outside=$4Du är utanför en plot
-playeractions.rootworld=$4Du får inte röra dig i den här världen.
-playeractions.spectator.notallowed=$4Du får inte teleportera när du är i spectator mode
-source.unknown=Okänd
+oldplots.list.title=$1Gamla plots fÃ¶r $2{0}
+playeractions.lang.notify.hover=$1Klicka hÃ¤r fÃ¶r att Ã¤ndra din sprÃ¥kinstÃ¤llning till $2{0}
+playeractions.lang.notify=$1HallÃ¥ dÃ¤r! Vi upptÃ¤ckte att du fÃ¶redrar att se meddelanden i {0}, Om du fÃ¶redrar att vÃ¥ra commandon sickar dig meddelanden pÃ¥ {0} Klicka pÃ¥ det hÃ¤r meddelandet fÃ¶r att Ã¤ndra sprÃ¥k preferenser.
+playeractions.plot.denied=$4Du nekas att besÃ¶ka den plot du teleporterar till
+playeractions.plot.interact=$4Du har inte behÃ¶righet att interagera med enheterna hÃ¤r
+playeractions.plot.outside=$4Du Ã¤r utanfÃ¶r en plot
+playeractions.rootworld=$4Du fÃ¥r inte rÃ¶ra dig i den hÃ¤r vÃ¤rlden.
+playeractions.spectator.notallowed=$4Du fÃ¥r inte teleportera nÃ¤r du Ã¤r i spectator mode
+source.unknown=OkÃ¤nd
 toolbinding.caught.block=verktyget kan inte bindas till blocks
 toolbinding.caught.duplicate=Det finns redan ett verktyg bundet till detta item
 toolbinding.caught.hand=verktyget kan inte vara bunden till handen
 worldmanagement.unloader.blacklist.added=$2{0} $1lades till i svartlistan och kommer inte att avlastas
-worldmanagement.unloader.blacklist.failed=$2{0} $1kunde inte svartlistas, är du säker på att den finns?
+worldmanagement.unloader.blacklist.failed=$2{0} $1kunde inte svartlistas, Ã¤r du sÃ¤ker pÃ¥ att den finns?
