--- a/hartshorn-i18n/src/main/resources/hartshorn/translations_de.properties
+++ b/hartshorn-i18n/src/main/resources/hartshorn/translations_de.properties
@@ -15,103 +15,104 @@
 # along with this library. If not, see {@literal<http://www.gnu.org/licenses/>}.
 #
 
-minecraft.enchant.infinity=Infinity
-minecraft.enchant.protection.projectile=Projectile Protection
-minecraft.enchant.knockback=Knockback
-minecraft.enchant.protection.fire=Fire Protection
-minecraft.enchant.depthstrider=Depth Strider
+# Capitalised most enchantment descriptions of the german translation and bound certain words together
+
+minecraft.enchant.infinity=Unendlichkeit
+minecraft.enchant.protection.projectile=Projektilschutz
+minecraft.enchant.knockback=Rückstoß
+minecraft.enchant.protection.fire=Feuerschutz
+minecraft.enchant.depthstrider=Wasserläufer
 minecraft.enchant.aquaaffinity=Aqua Affinity
-minecraft.enchant.featherfalling=Feather Falling
-minecraft.enchant.sealuck=Luck Of The Sea
-minecraft.enchant.protection.blast=Blast Protection
+minecraft.enchant.featherfalling=Federfall
+minecraft.enchant.sealuck=Glück des Meeres
+minecraft.enchant.protection.blast=Explosionsschutz
 minecraft.enchant.baneofarthopods=Bane Of Arthropods
-minecraft.enchant.binding=Binding Curse
-minecraft.enchant.fireaspect=Fire Aspect
-minecraft.enchant.vanishing=Vanishing Curse
-minecraft.enchant.protection=Protection
+minecraft.enchant.binding=Bindender Fluch
+minecraft.enchant.fireaspect=Feueraspekt
+minecraft.enchant.vanishing=Fluch des Verschwindens
+minecraft.enchant.protection=Schutz
 minecraft.enchant.lure=Lure
 minecraft.enchant.mending=Mending
-minecraft.enchant.respiration=Respiration
+minecraft.enchant.respiration=Atmung
 minecraft.enchant.smite=Smite
-minecraft.enchant.looting=Looting
-minecraft.enchant.sharpness=Sharpness
-minecraft.enchant.thorns=Thorns
-minecraft.enchant.flame=Flame
-minecraft.enchant.power=Power
+minecraft.enchant.looting=Plünderung
+minecraft.enchant.sharpness=Schärfe
+minecraft.enchant.thorns=Dornen
+minecraft.enchant.flame=Flamme
+minecraft.enchant.power=Kraft
 minecraft.enchant.sweeping=Sweeping
-minecraft.enchant.unbreaking=Unbreaking
-minecraft.enchant.efficiency=Efficiency
-minecraft.enchant.punch=Punch
-minecraft.enchant.frostwalker=Frost Walker
-minecraft.enchant.fortune=Fortune
+minecraft.enchant.unbreaking=Unzerstörbarkeit
+minecraft.enchant.efficiency=Effizienz
+minecraft.enchant.punch=Schlag
+minecraft.enchant.frostwalker=Eisläufer
+minecraft.enchant.fortune=Glück
 minecraft.enchant.silktouch=Silk Touch
-hartshorn.exception=$4{0}
+selene.exception=$4{0}
 prefix=$3[] $1
-caught=$4An error occurred. $3{0}
-source.unknown=Unknown
-caught.reference.lost=$4Reference to object lost
-caught.failedbinding=$4Cannot apply to this type
-source.none=None
-oldplots.caught.calculation=$4Could not calculate plot location
-oldplots.list.hover=$2Teleport to $1{0}$2, $1{1}, {2}
+caught=$4Ein Fehler ist aufgetreten. $3{0}
+source.unknown=Unbekannt
+caught.reference.lost=$4Bezug auf Objekt wurde verloren
+caught.failedbinding=$4Kann auf diesen Typ nicht angewendet werden
+source.none=Nichts
+oldplots.caught.calculation=$4Plotposition konnte nicht ermittelt werden
+oldplots.list.hover=$2Teleportiere zu $1{0}$2, $1{1}, {2}
 oldplots.list.single=$3 - $1{0}$2, $1{1}, {2}
-oldplots.caught.plot=$4No plot with that ID found
-oldplots.caught.worlds=$4Worlds are not stored as OldPlots
-oldplots.caught.player=$4No valid player provided
-oldplots.caught.location=$4No world location configured for '{0}'
-oldplots.list.title=$1OldPlots for $2{0}
-dave.suggestion.link.hover=$2Click to open $1{0}
-dave.trigger.notfound=$4No trigger with id '{0}' exists.
-dave.trigger.single.hover=$1Click to perform trigger
-dave.suggestion.link=Here's a useful link, $1{0}
-dave.unmute=$1Unmuted Dave
-dave.reload=$1Reloaded Dave without breaking stuff, whoo!
+oldplots.caught.plot=$4Es konnte kein Plot mit dieser ID gefunden werden
+oldplots.caught.worlds=$4Welten werden nicht als Oldplots gespeichert
+oldplots.caught.player=$4Kein gültiger Spieler angegeben
+oldplots.caught.location=$4Es ist kein Ort für'{0}'konfiguriert
+oldplots.list.title=$1OldPlots für $2{0}
+dave.suggestion.link.hover=$2Zum öffnen klicken$1{0}
+dave.trigger.notfound=$4Es existiert kein Trigger unter '{0}'
+dave.trigger.single.hover=$1Klicken, um Trigger zu aktivieren
+dave.suggestion.link=Hier ist ein nützlicher Link, $1{0}
+dave.unmute=$1Dave's Stummschaltung aufgehoben
+dave.reload=$1Dave wurde aktualisiert ohne was kaputt zu machen, juhuu!
 dave.trigger.header=$1Triggers
 dave.discord.format=**Dave** ≫ {0}
-dave.mute=$4Muted Dave, note that important triggers will always show
+dave.mute=$4Dave wurde stummgeschaltet. Wichtige Trigger werden dennoch angezeigt.
 dave.trigger.single=$3 - $1{0}
-hartshorn.reload.single=$1Successfully reloaded '$2{0}$1'
-hartshorn.info.service.unknown=$4Could not find service with ID '{0}'
+selene.reload.single=$1Reload erfolgreich'$2{0}$1'
+selene.info.service.unknown=$4Unter '{0}' konnte kein Service gefunden werden.
 i18n.lang.updated.other=$1The language preference for $2{0} $1has been switched to: $2{1}
-hartshorn.confirm.invalid.id=$4Could not confirm command: Invalid runner ID
+selene.confirm.invalid.id=$4Could not confirm command: Invalid runner ID	// Befehl konnte nicht bestätigt werden: 
 i18n.lang.updated=$1Your preferred language has been switched to: $2{0}
-hartshorn.confirm.invalid.other=$4Could not confirm command
-hartshorn.info.service.hover=$2Details for '$1{0}$2'
-hartshorn.confirm.invalid.source=$4This command can only be used by identifiable sources (players, console) matching the original source of the command
-hartshorn.info.parameter.missing=$4Missing value for argument '{0}'
-hartshorn.pagination.title=$1Hartshorn Server Info
-hartshorn.info.authors=$2Authors$3: $1{0}
-hartshorn.info.services=$2Services$3:
-hartshorn.info.header=$2Hartshorn $3($1Version$3: $1{0}$3)
-hartshorn.invalid.source=$4This command can only be used by players
-hartshorn.info.service.row=$3 - $1{0} $3- $2{1}
-hartshorn.reload.single.fail=$4Failed to reload '{0}'
-hartshorn.reload.all=$1Successfully reloaded all services
-hashtag.wrong_format=Pattern has to be formatted as #type[arg1][arg2][etc.]
-missing_args=Not enough arguments.
-missing_converter=Parameter of type {0} has no registered converter
-toolbinding.caught.duplicate=There is already a tool bound to this item
-toolbinding.caught.block=Tool cannot be bound to blocks
-toolbinding.caught.hand=Tool cannot be bound to hand
-worldmanagement.unloader.blacklist.failed=$2{0} $1could not be blacklisted, are you sure it exists?
-worldmanagement.unloader.blacklist.added=$2{0} $1was added to the blacklist and will not be unloaded
-playeractions.spectator.notallowed=$4You are not allowed to teleport while in spectator mode
-playeractions.plot.denied=$4You are denied from the plot you are teleporting to
-playeractions.plot.interact=$4You do not have permission to interact with entities here
-playeractions.plot.outside=$4You are outside a plot
-playeractions.rootworld=$4You are not permitted to move in this world
-discord.command.not.permitted=You are not permitted to use that command!
-discord.command.unknown=Sorry, I don't know what to do with that command!
-discord.command.caught=Sorry, I could not start that command. Please report this in our support channel.
-caught.command.missingargs=$4The command requires arguments
-confirm.message.hover=$1Confirm running command
-confirm.message=$1This command requires confirmation, click $2[here] $1to confirm
-playeractions.lang.notify=$1Hi there! We detected you prefer to see messages in {0}, if you would like our commands to send you messages in {0} click on this message to change your language preference.
-playeractions.lang.notify.hover=$1Click here to change your language preference to $2{0}
-settings.notifications=Receive notifications
-settings.notifications.description=Whether to receive server notifications, for example when you change your client-side language preferences.
-settings.language=Language
-settings.language.description=The language in which messages are displayed to you.
-yes=Yes
-no=No
-settings=$1Settings
+selene.confirm.invalid.other=$4Befehl konnte nicht bestätigt werden
+selene.info.service.hover=$2Einzelheiten für '$1{0}$2'
+selene.info.parameter.missing=$4Benötige Wert für Aussage '{0}'
+selene.pagination.title=$1Selene Server Informationen
+selene.info.authors=$2Authoren$3: $1{0}
+selene.info.services=$2Dienste$3:
+selene.info.header=$2Selene $3($1Version$3: $1{0}$3)
+selene.invalid.source=$4Dieser Befehl kann nur von Spielern benutzt werden
+selene.info.service.row=$3 - $1{0} $3- $2{1}
+selene.reload.single.fail=$4Reload von '{0}' fehlgeschlagen
+selene.reload.all=$1Alle Dienste wurden erfolgreich neu geladen.
+hashtag.wrong_format=Dieses Muster muss als #type[arg1][arg2][etc.] formatiert werden
+missing_args=Nicht genug Angaben
+missing_converter=Für den Parameter {0} wurde kein registrierter converter gefunden
+toolbinding.caught.duplicate=Auf dieses Item ist bereits ein Werkzeug gebunden
+toolbinding.caught.block=Dieses Werkzeug kann nicht an Blöcke gebunden werden
+toolbinding.caught.hand=Dieses Werkzeug kann nicht an die Spielerhand gebunden werden.
+worldmanagement.unloader.blacklist.failed=$2{0} $1konnte nicht auf die Blacklist gesetzt werden. Bist du sicher, dass es existiert?
+worldmanagement.unloader.blacklist.added=$2{0} $1wurde auf die Blacklist gesetzt
+playeractions.spectator.notallowed=$4Teleportation ist im Zuschauermodus nicht möglich
+playeractions.plot.denied=$4Teleportation zu Plot wurde verweigert
+playeractions.plot.interact=$4Du kannst hier nicht mit Entitäten interagieren
+playeractions.plot.outside=$4Du befindest dich ausserhalb eines Plots
+playeractions.rootworld=$4Du darfst dich in dieser Welt nicht bewegen
+discord.command.not.permitted=Du darfst diesen Befehl nicht ausführen!
+discord.command.unknown=Tut mir leid, ich kenne diesen Befehl nicht!
+discord.command.caught=Tut mir leid, ich kann diesen Befehl nicht starten. Melde diesen Vorfall bitte in unserem Support Channel.
+caught.command.missingargs=$4Dieser Befehl benötigt Argumente
+confirm.message.hover=$1Auszuführenden Befehl bestätigen
+confirm.message=$1Dieser Befehl benötigt eine Bestätigung. Klicke $2[hier] $1 um ihn zu bestätigen
+playeractions.lang.notify=$1Hallo! Wir haben gemerkt, dass du dir Nachrichten in {0} ansehen willst. Fallst du willst, dass unsere Befehle dir Nachrichten in {0} anzeigen, klicke auf hier um deine Spracheinstellungen anzupassen.
+playeractions.lang.notify.hover=$1Klicke hier, um deine bevorzugte Sprache auf $2{0} zu setzen.
+settings.notifications=Benachrichtigungen erhalten
+settings.notifications.description=Ob Serverbenachrichtigungen erhalten werden, zB. wenn Spracheinstellungen der client-side geändert werden
+settings.language=Sprache
+settings.language.description=Die Sprache, in welcher dir Nachrichten angezeigt werden
+yes=Ja
+no=Nein
+settings=$1Einstellungen
