--- a/hartshorn-i18n/src/main/resources/hartshorn/batches/26062021/translations_de.properties
+++ b/hartshorn-i18n/src/main/resources/hartshorn/batches/26062021/translations_de.properties
@@ -15,9 +15,9 @@
 # along with this library. If not, see {@literal<http://www.gnu.org/licenses/>}.
 #
 
-caught.failedbinding=$4Cannot apply to this type
-caught.reference.lost=$4Reference to object lost
-caught=$4An error occurred. $3{0}
+caught.failedbinding=$4Kann auf diesen Typ nicht angewendet werden
+caught.reference.lost=$4Bezug auf Objekt wurde verloren
+caught=$4Ein Fehler ist aufgetreten. $3{0}
 command.confirm.hover=$1Confirm running command
 command.confirm=$1This command requires confirmation, click $2[here] $1to confirm
 command.cooldown=You are in cooldown
@@ -29,17 +29,17 @@ command.missing.handler=No supported command handler found for '{0}'
 command.overflow=$4Too many arguments
 command.parameter.missing.arguments=$4Not enough arguments for parameter '{0}'
 command.parse.failure=Could not parse {0} '{1}'
-dave.mute=$4Muted Dave, note that important triggers will always show
-dave.reload=$1Reloaded Dave without breaking stuff, whoo!
-dave.suggestion.link.hover=$2Click to open $1{0}
-dave.suggestion.link=Here's a useful link, $1{0}
+dave.mute=$4Dave wurde stummgeschaltet. Wichtige Trigger werden dennoch angezeigt.
+dave.reload=$1Dave wurde aktualisiert ohne was kaputt zu machen, juhuu!
+dave.suggestion.link.hover=$2Zum öffnen klicken$1{0}
+dave.suggestion.link=Hier ist ein nützlicher Link, $1{0}
 dave.trigger.header=$1Triggers
-dave.trigger.notfound=$4No trigger with id '{0}' exists.
-dave.trigger.single.hover=$1Click to perform trigger
-dave.unmute=$1Unmuted Dave
-discord.command.caught=Sorry, I could not start that command. Please report this in our support channel.
-discord.command.not.permitted=You are not permitted to use that command!
-discord.command.unknown=Sorry, I don't know what to do with that command!
+dave.trigger.notfound=$4Es existiert kein Trigger unter '{0}'
+dave.trigger.single.hover=$1Klicken, um Trigger zu aktivieren
+dave.unmute=$1Dave's Stummschaltung aufgehoben
+discord.command.caught=Tut mir leid, ich kann diesen Befehl nicht starten. Melde diesen Vorfall bitte in unserem Support Channel.
+discord.command.not.permitted=Du darfst diesen Befehl nicht ausführen!
+discord.command.unknown=Tut mir leid, ich kenne diesen Befehl nicht!
 hartshorn.confirm.invalid.source=$4This command can only be used by identifiable sources (players, console) matching the original source of the command
 hartshorn.info.header=$2Hartshorn $3($1Version$3: $1{0}$3)
 hartshorn.info.service.hover=$2Details for '$1{0}$2'
@@ -50,58 +50,58 @@ hartshorn.pagination.title=$1Hartshorn Server Info
 hartshorn.reload.all=$1Successfully reloaded all services
 hartshorn.reload.single.fail=$4Failed to reload '{0}'
 hartshorn.reload.single=$1Successfully reloaded '$2{0}$1'
-hashtag.wrong_format=Pattern has to be formatted as #type[arg1][arg2][etc.]
+hashtag.wrong_format=Dieses Muster muss als #type[arg1][arg2][etc.] formatiert werden
 i18n.lang.updated.other=$1The language preference for $2{0} $1has been switched to: $2{1}
 i18n.lang.updated=$1Your preferred language has been switched to: $2{0}
 minecraft.enchant.aquaaffinity=Aqua Affinity
 minecraft.enchant.baneofarthopods=Bane Of Arthropods
-minecraft.enchant.binding=Binding Curse
-minecraft.enchant.depthstrider=Depth Strider
-minecraft.enchant.efficiency=Efficiency
-minecraft.enchant.featherfalling=Feather Falling
-minecraft.enchant.fireaspect=Fire Aspect
-minecraft.enchant.flame=Flame
-minecraft.enchant.fortune=Fortune
-minecraft.enchant.frostwalker=Frost Walker
-minecraft.enchant.infinity=Infinity
-minecraft.enchant.knockback=Knockback
-minecraft.enchant.looting=Looting
+minecraft.enchant.binding=Bindender Fluch
+minecraft.enchant.depthstrider=Wasserläufer
+minecraft.enchant.efficiency=Effizienz
+minecraft.enchant.featherfalling=Federfall
+minecraft.enchant.fireaspect=Feueraspekt
+minecraft.enchant.flame=Flamme
+minecraft.enchant.fortune=Glück
+minecraft.enchant.frostwalker=Eisläufer
+minecraft.enchant.infinity=Unendlichkeit
+minecraft.enchant.knockback=Rückstoß
+minecraft.enchant.looting=Plünderung
 minecraft.enchant.lure=Lure
 minecraft.enchant.mending=Mending
-minecraft.enchant.power=Power
-minecraft.enchant.protection.blast=Blast Protection
-minecraft.enchant.protection.fire=Fire Protection
-minecraft.enchant.protection.projectile=Projectile Protection
-minecraft.enchant.protection=Protection
-minecraft.enchant.punch=Punch
-minecraft.enchant.respiration=Respiration
-minecraft.enchant.sealuck=Luck Of The Sea
-minecraft.enchant.sharpness=Sharpness
+minecraft.enchant.power=Kraft
+minecraft.enchant.protection.blast=Explosionsschutz
+minecraft.enchant.protection.fire=Feuerschutz
+minecraft.enchant.protection.projectile=Projektilschutz
+minecraft.enchant.protection=Schutz
+minecraft.enchant.punch=Schlag
+minecraft.enchant.respiration=Atmung
+minecraft.enchant.sealuck=Glück des Meeres
+minecraft.enchant.sharpness=Schärfe
 minecraft.enchant.silktouch=Silk Touch
 minecraft.enchant.smite=Smite
 minecraft.enchant.sweeping=Sweeping
-minecraft.enchant.thorns=Thorns
-minecraft.enchant.unbreaking=Unbreaking
-minecraft.enchant.vanishing=Vanishing Curse
-missing_args=Not enough arguments.
-missing_converter=Parameter of type {0} has no registered converter
-oldplots.caught.calculation=$4Could not calculate plot location
-oldplots.caught.location=$4No world location configured for '{0}'
-oldplots.caught.player=$4No valid player provided
-oldplots.caught.plot=$4No plot with that ID found
-oldplots.caught.worlds=$4Worlds are not stored as OldPlots
-oldplots.list.hover=$2Teleport to $1{0}$2, $1{1}, {2}
-oldplots.list.title=$1OldPlots for $2{0}
-playeractions.lang.notify.hover=$1Click here to change your language preference to $2{0}
-playeractions.lang.notify=$1Hi there! We detected you prefer to see messages in {0}, if you would like our commands to send you messages in {0} click on this message to change your language preference.
-playeractions.plot.denied=$4You are denied from the plot you are teleporting to
-playeractions.plot.interact=$4You do not have permission to interact with entities here
-playeractions.plot.outside=$4You are outside a plot
-playeractions.rootworld=$4You are not permitted to move in this world
-playeractions.spectator.notallowed=$4You are not allowed to teleport while in spectator mode
-source.unknown=Unknown
-toolbinding.caught.block=Tool cannot be bound to blocks
-toolbinding.caught.duplicate=There is already a tool bound to this item
-toolbinding.caught.hand=Tool cannot be bound to hand
-worldmanagement.unloader.blacklist.added=$2{0} $1was added to the blacklist and will not be unloaded
-worldmanagement.unloader.blacklist.failed=$2{0} $1could not be blacklisted, are you sure it exists?
+minecraft.enchant.thorns=Dornen
+minecraft.enchant.unbreaking=Unzerstörbarkeit
+minecraft.enchant.vanishing=Fluch des Verschwindens
+missing_args=Nicht genug Angaben
+missing_converter=Für den Parameter {0} wurde kein registrierter converter gefunden
+oldplots.caught.calculation=$4Plotposition konnte nicht ermittelt werden
+oldplots.caught.location=$4Es ist kein Ort für'{0}'konfiguriert
+oldplots.caught.player=$4Kein gültiger Spieler angegeben
+oldplots.caught.plot=$4Es konnte kein Plot mit dieser ID gefunden werden
+oldplots.caught.worlds=$4Welten werden nicht als Oldplots gespeichert
+oldplots.list.hover=$2Teleportiere zu $1{0}$2, $1{1}, {2}
+oldplots.list.title=$1OldPlots für $2{0}
+playeractions.lang.notify.hover=$1Klicke hier, um deine bevorzugte Sprache auf $2{0} zu setzen.
+playeractions.lang.notify=$1Hallo! Wir haben gemerkt, dass du dir Nachrichten in {0} ansehen willst. Fallst du willst, dass unsere Befehle dir Nachrichten in {0} anzeigen, klicke auf hier um deine Spracheinstellungen anzupassen.
+playeractions.plot.denied=$4Teleportation zu Plot wurde verweigert
+playeractions.plot.interact=$4Du kannst hier nicht mit Entitäten interagieren
+playeractions.plot.outside=$4Du befindest dich ausserhalb eines Plots
+playeractions.rootworld=$4Du darfst dich in dieser Welt nicht bewegen
+playeractions.spectator.notallowed=$4Teleportation ist im Zuschauermodus nicht möglich
+source.unknown=Unbekannt
+toolbinding.caught.block=Dieses Werkzeug kann nicht an Blöcke gebunden werden
+toolbinding.caught.duplicate=Auf dieses Item ist bereits ein Werkzeug gebunden
+toolbinding.caught.hand=Dieses Werkzeug kann nicht an die Spielerhand gebunden werden.
+worldmanagement.unloader.blacklist.added=$2{0} $1wurde auf die Blacklist gesetzt
+worldmanagement.unloader.blacklist.failed=$2{0} $1konnte nicht auf die Blacklist gesetzt werden. Bist du sicher, dass es existiert?
