--- a/hartshorn-i18n/src/main/resources/hartshorn/batches/26062021/translations_ja.properties
+++ b/hartshorn-i18n/src/main/resources/hartshorn/batches/26062021/translations_ja.properties
@@ -15,8 +15,8 @@
 # along with this library. If not, see {@literal<http://www.gnu.org/licenses/>}.
 #
 
-caught.failedbinding=$4??????????????
-caught.reference.lost=$4??????????????
+caught.failedbinding=$4このタイプには適用できません
+caught.reference.lost=$4失われたオブジェクトへの参照
 caught=$4An error occurred. $3{0}
 command.confirm.hover=$1Confirm running command
 command.confirm=$1This command requires confirmation, click $2[here] $1to confirm
@@ -29,79 +29,79 @@ command.missing.handler=No supported command handler found for '{0}'
 command.overflow=$4Too many arguments
 command.parameter.missing.arguments=$4Not enough arguments for parameter '{0}'
 command.parse.failure=Could not parse {0} '{1}'
-dave.mute=$4Dave????????????????????????????
-dave.reload=$1Dave??????????? whoo!
+dave.mute=$4Daveをミュートしました、大事な事はミュートされず表示されます
+dave.reload=$1Daveを読み込み終えました。 whoo!
 dave.suggestion.link.hover=$2Click to open $1{0}
-dave.suggestion.link=??????????? $1{0}
+dave.suggestion.link=役に立つリンクはこちら $1{0}
 dave.trigger.header=$1Triggers
-dave.trigger.notfound=$4id '{0}' ????????????
-dave.trigger.single.hover=$1????????
-dave.unmute=$1Dave????????
-discord.command.caught=????????????????????????????????????????????????????
-discord.command.not.permitted=?????????????????????
-discord.command.unknown=?????????????????????????????
-hartshorn.confirm.invalid.source=$4???????????????????????????????????????????????????????????
+dave.trigger.notfound=$4id '{0}' のトリガーは存在しません
+dave.trigger.single.hover=$1クリックして実行
+dave.unmute=$1Daveのミュートを解除
+discord.command.caught=申し訳ありませんが、そのコマンドは起動できませんでした。お手数ですが、サポートチャンネルでご報告ください
+discord.command.not.permitted=そのコマンドを使うことは許可されていません
+discord.command.unknown=ごめんなさい、そのコマンドでは何をすればいいかわかりません
+hartshorn.confirm.invalid.source=$4このコマンドを使用できるのは、コマンドのオリジナルソースと一致する識別可能なソース（プレーヤー、コンソール）のみです。
 hartshorn.info.header=$2Hartshorn $3($1Version$3: $1{0}$3)
 hartshorn.info.service.hover=$2Details for '$1{0}$2'
-hartshorn.info.service.unknown=$4ID '{0}'????????????????
+hartshorn.info.service.unknown=$4ID '{0}'のサービスが見つかりませんでした
 hartshorn.info.services=$2Services$3:
-hartshorn.invalid.source=$4?????????????????????
+hartshorn.invalid.source=$4このコマンドは、プレイヤーのみ使用可能です
 hartshorn.pagination.title=$1Hartshorn Server Info
-hartshorn.reload.all=$1???????????????????
-hartshorn.reload.single.fail=$4??????????? '{0}'
-hartshorn.reload.single=$1??????????? '$2{0}$1'
-hashtag.wrong_format=Patterns ?#type[arg1][arg2][etc]?????????????????
-i18n.lang.updated.other=$2{0} $1????????????? $2{1}
-i18n.lang.updated=$1???????: $2 {0} $1????????
-minecraft.enchant.aquaaffinity=????
-minecraft.enchant.baneofarthopods=???
-minecraft.enchant.binding=?????
-minecraft.enchant.depthstrider=????
-minecraft.enchant.efficiency=??
-minecraft.enchant.featherfalling=????
-minecraft.enchant.fireaspect=???
-minecraft.enchant.flame=??
-minecraft.enchant.fortune=??
-minecraft.enchant.frostwalker=???
-minecraft.enchant.infinity=??
-minecraft.enchant.knockback=??????
-minecraft.enchant.looting=??????
-minecraft.enchant.lure=????
-minecraft.enchant.mending=??
-minecraft.enchant.power=????????
-minecraft.enchant.protection.blast=????
-minecraft.enchant.protection.fire=??
-minecraft.enchant.protection.projectile=??????
-minecraft.enchant.protection=??????
-minecraft.enchant.punch=???
-minecraft.enchant.respiration=????
-minecraft.enchant.sealuck=???
-minecraft.enchant.sharpness=??
-minecraft.enchant.silktouch=??????
-minecraft.enchant.smite=????
-minecraft.enchant.sweeping=????????
-minecraft.enchant.thorns=???
-minecraft.enchant.unbreaking=???
-minecraft.enchant.vanishing=?????
-missing_args=??????????
-missing_converter=???{0}???????????????????????
-oldplots.caught.calculation=$4??????????????????
-oldplots.caught.location=$4 '{0}'?????????????????????
-oldplots.caught.player=$4???????????????
-oldplots.caught.plot=$4oldplots.caught.worlds=$4?????OldPlots????????????
+hartshorn.reload.all=$1全てのサービスの読み込みに成功しました
+hartshorn.reload.single.fail=$4読み込みに失敗しました '{0}'
+hartshorn.reload.single=$1読み込みに成功しました '$2{0}$1'
+hashtag.wrong_format=Patterns は#type[arg1][arg2][etc]のような形式で書かなければならない
+i18n.lang.updated.other=$2{0} $1の言語設定が変更されました $2{1}
+i18n.lang.updated=$1お使いの言語が: $2 {0} $1に変更されました
+minecraft.enchant.aquaaffinity=水中採掘
+minecraft.enchant.baneofarthopods=虫殺し
+minecraft.enchant.binding=束縛の呪い
+minecraft.enchant.depthstrider=水中歩行
+minecraft.enchant.efficiency=効率
+minecraft.enchant.featherfalling=落下耐性
+minecraft.enchant.fireaspect=火属性
+minecraft.enchant.flame=火炎
+minecraft.enchant.fortune=幸運
+minecraft.enchant.frostwalker=氷渡り
+minecraft.enchant.infinity=無限
+minecraft.enchant.knockback=ノックバック
+minecraft.enchant.looting=ドロップ増加
+minecraft.enchant.lure=入れ食い
+minecraft.enchant.mending=修繕
+minecraft.enchant.power=射撃ダメージ増加
+minecraft.enchant.protection.blast=爆発耐性
+minecraft.enchant.protection.fire=防火
+minecraft.enchant.protection.projectile=飛び道具耐性
+minecraft.enchant.protection=ダメージ軽減
+minecraft.enchant.punch=パンチ
+minecraft.enchant.respiration=水中呼吸
+minecraft.enchant.sealuck=宝釣り
+minecraft.enchant.sharpness=鋭さ
+minecraft.enchant.silktouch=シルクタッチ
+minecraft.enchant.smite=聖なる力
+minecraft.enchant.sweeping=範囲ダメージ増加
+minecraft.enchant.thorns=棘の鎧
+minecraft.enchant.unbreaking=耐久力
+minecraft.enchant.vanishing=消滅の呪い
+missing_args=不完全なコマンドです
+missing_converter=タイプ{0}のパラメータに登録されたコンバータがありません
+oldplots.caught.calculation=$4プロットの位置を計算できませんでした
+oldplots.caught.location=$4 '{0}'にワールドロケーションが設定されていません
+oldplots.caught.player=$4参照できるプレイヤーが居ません
+oldplots.caught.plot=$4oldplots.caught.worlds=$4ワールドがOldPlotsとして保存されていません
 oldplots.caught.worlds=$4Worlds are not stored as OldPlots
 oldplots.list.hover=$2Teleport to $1{0}$2, $1{1}, {2}
 oldplots.list.title=$1OldPlots for $2{0}
-playeractions.lang.notify.hover=$1???????????????$2{0}?????????
-playeractions.lang.notify=$1$1??????????{0}?????????????????????{0}???????????????????????????????????????????????
-playeractions.plot.denied=$4???????plot?????????
-playeractions.plot.interact=$4???????????????????????????
-playeractions.plot.outside=$4????????
-playeractions.rootworld=$4????????????????????????
-playeractions.spectator.notallowed=$4???????????????????????
+playeractions.lang.notify.hover=$1ここをクリックして、言語設定を$2{0}に変更してください
+playeractions.lang.notify=$1$1こんにちは。あなたは{0}でメッセージを見るのがお好きなようですね。{0}でのメッセージ送信を希望される場合は、このメッセージをクリックして、言語設定を変更してください
+playeractions.plot.denied=$4テレポート先のplotから拒否されました
+playeractions.plot.interact=$4あなたはここでエンティティと対話する許可を得ていません
+playeractions.plot.outside=$4区画の外に居ます
+playeractions.rootworld=$4あなたはこのワールドで動く事を許可されていません
+playeractions.spectator.notallowed=$4スペクテイターモードではテレポートはできません
 source.unknown=Unknown
-toolbinding.caught.block=?????????????????????
-toolbinding.caught.duplicate=???????????????????????
-toolbinding.caught.hand=??????????????????
-worldmanagement.unloader.blacklist.added=$2{0} $1????????????????
-worldmanagement.unloader.blacklist.failed=$2{0} $1????????????????????????????????????
+toolbinding.caught.block=ツールをブロックに登録することはできません
+toolbinding.caught.duplicate=このアイテムにはすでにツールが登録されています
+toolbinding.caught.hand=ツールを手に登録することはできません
+worldmanagement.unloader.blacklist.added=$2{0} $1はブラックリストに追加されました
+worldmanagement.unloader.blacklist.failed=$2{0} $1はブラックリストに追加できませんでした。本当に名前が間違っていませんか？
