--- a/hartshorn-i18n/src/main/resources/hartshorn/translations_tr.properties
+++ b/hartshorn-i18n/src/main/resources/hartshorn/translations_tr.properties
@@ -15,103 +15,93 @@
 # along with this library. If not, see {@literal<http://www.gnu.org/licenses/>}.
 #
 
-minecraft.enchant.infinity=Sonsuzluk
-minecraft.enchant.protection.projectile=Atkı Koruması
-minecraft.enchant.knockback=Savurma
-minecraft.enchant.protection.fire=Ateş Koruması
-minecraft.enchant.depthstrider=Derin Koşucu
-minecraft.enchant.aquaaffinity=Su Adaptasyonu
-minecraft.enchant.featherfalling=Tüy Düşüşü
-minecraft.enchant.sealuck=Deniz Şansı
-minecraft.enchant.protection.blast=Patlama Koruması
-minecraft.enchant.baneofarthopods=Eklembacaklıların Kıyameti
-minecraft.enchant.binding=Bağlama Laneti
-minecraft.enchant.fireaspect=Ateşten Çehre
-minecraft.enchant.vanishing=Kaybolma Laneti
-minecraft.enchant.protection=Koruma
-minecraft.enchant.lure=Ayartma
-minecraft.enchant.mending=Tamir
-minecraft.enchant.respiration=Solungaç
-minecraft.enchant.smite=Darbe
-minecraft.enchant.looting=Ganimet
-minecraft.enchant.sharpness=Keskinlik
-minecraft.enchant.thorns=Dikenler
-minecraft.enchant.flame=Alev
-minecraft.enchant.power=Güç
-minecraft.enchant.sweeping=Süpürücü Kenar
-minecraft.enchant.unbreaking=Kırılmazlık
-minecraft.enchant.efficiency=Verimlilik
-minecraft.enchant.punch=Yumruk
-minecraft.enchant.frostwalker=Kırağı Yürüten
-minecraft.enchant.fortune=Servet
-minecraft.enchant.silktouch=İpeksi Dokunuş
-hartshorn.exception=$4{0}
-prefix=$3[] $1
-caught=$4Bir hata meydana geldi $3{0}
-source.unknown=Bilinmiyor
-caught.reference.lost=$4Kayıp olan objeyi baz alır
 caught.failedbinding=$4Bu türe uygulanamaz
-source.none= Hiçbir Şey
-oldplots.caught.calculation=$4Arsanın yeri hesaplanmıyor
-oldplots.list.hover=$2Şuraya ışınlan $1{0}$2, $1{1}, {2}
-oldplots.list.single=$3 - $1{0}$2, $1{1}, {2}
-oldplots.caught.plot=$4Bu ID ile arsa bulnamadı
-oldplots.caught.worlds=$4Dünyalar OldPlots olarak saklanmamıştır
-oldplots.caught.player=$4Geçerli bir oyuncu bulunamadı
-oldplots.caught.location=$4 '{0}' içinde hiçbir dünya bulunmamaktadır
-oldplots.list.title=$1OldPlots için $2{0}
+caught.reference.lost=$4Kayıp olan objeyi baz alır
+caught=$4Bir hata meydana geldi $3{0}
+command.confirm.hover=$1Çalışmaktaki komutu onalyayın
+command.confirm=$1Bu komut onay gerektiriyor, $2[buraya] $1tıklayarak onaylayın.
+command.cooldown=Beklemedesiniz
+command.flag.unknown=Bilinmeyen işaret '{0}'
+command.illegal=Tutarsız argüman tanımı
+command.missing.arguments=$4B
+command.missing.executor=1} argümanı ile '{0}' komutuna hiçbir çalıştırıcı kaydedilmemiştir
+command.missing.handler='{0}' için desteklenen bir komut idarecisi bulunmamıştır
+command.overflow=$4Çok fazla argüman var
+command.parameter.missing.arguments=$4'{0}' parametresi için yeterli argüman yoktur.
+command.parse.failure={0} Ayrıştırılamadı '{1}'
+dave.mute=$4Dave susturuldu, ama önemli tetiklemerin her zaman görüneceğini unutmayın
+dave.reload=$1 Hiçbir şeyi kımadan Dave'i yeniden yükledik,olley!
 dave.suggestion.link.hover=$2Açmak için Tıklayın $1{0}
+dave.suggestion.link=İşinize yarayabilecek bir link, $1{0}
+dave.trigger.header=$1Tetiklemeler
 dave.trigger.notfound=$4 '{0}' id ile hiçbir tetikleme bulunmamaktadır.
 dave.trigger.single.hover=$1Tetiklemeyi çalıştırmak için tıklayın
-dave.suggestion.link=İşinize yarayabilecek bir link, $1{0}
 dave.unmute=$1Dave artık konuşabilir
-dave.reload=$1 Hiçbir şeyi kımadan Dave'i yeniden yükledik,olley!
-dave.trigger.header=$1Tetiklemeler
-dave.discord.format=**Dave** ≫ {0}
-dave.mute=$4Dave susturuldu, ama önemli tetiklemerin her zaman görüneceğini unutmayın
-dave.trigger.single=$3 - $1{0}
-hartshorn.reload.single=$1Başarıyla yeniden yüklendi'$2{0}$1'
-hartshorn.info.service.unknown=$4'{0}' adlı ID için bir servis bulunamadı
-i18n.lang.updated.other=$2{0} $1 için dil seçeneğiniz, $2{1} $1ile değiştirilmiştir
-hartshorn.confirm.invalid.id=$4Komut doğrulanamıyor: Geçersiz ID
-i18n.lang.updated=$1Tercih edilen diliniz $2{0} $1olarak değiştirildi.
-hartshorn.confirm.invalid.other=$4Komut doğrulanamadı
-hartshorn.info.service.hover='$1{0}$2' $2için detaylar
+discord.command.caught=Özür dilerim, bu komutu başlatamadım. Lutfen bunu destek kanalımıza bildirin.
+discord.command.not.permitted=Bu komutu kullanma izniniz yoktur!
+discord.command.unknown=Özür dilerim, bu komut ile ne yapacağımı bilmiyorum!
 hartshorn.confirm.invalid.source=$4Bu komut sadece bilindik kaynaklar (oyuncular, konsol)ancak komutun orijinal kaynağı ile uyuştuğunda kullanılabilir
-hartshorn.info.parameter.missing='{0}'$4argümanı için değer eksiktir
-hartshorn.pagination.title=$1Hartshorn Sunucu Hakkında
-hartshorn.info.authors=$2Emeği Geçenler$3: $1{0}
-hartshorn.info.services=$2Servisler$3:
 hartshorn.info.header=$2Hartshorn $3($1Sürüm$3: $1{0}$3)
+hartshorn.info.service.hover='$1{0}$2' $2için detaylar
+hartshorn.info.service.unknown=$4'{0}' adlı ID için bir servis bulunamadı
+hartshorn.info.services=$2Servisler$3:
 hartshorn.invalid.source=$4Bu komut sadece oyuncular tarafından kullanılabilir
-hartshorn.info.service.row=$3 - $1{0} $3- $2{1}
-hartshorn.reload.single.fail=$4Yeniden yüklenemedi '{0}'
+hartshorn.pagination.title=$1Hartshorn Sunucu Hakkında
 hartshorn.reload.all=$1Bütün servisler başarıyla yeniden yüklendi
+hartshorn.reload.single.fail=$4Yeniden yüklenemedi '{0}'
+hartshorn.reload.single=$1Başarıyla yeniden yüklendi'$2{0}$1'
 hashtag.wrong_format=Şablonun bu formatta yazılması gerekmekterdir: #type[arg1][arg2][etc.]
+i18n.lang.updated.other=$2{0} $1 için dil seçeneğiniz, $2{1} $1ile değiştirilmiştir
+i18n.lang.updated=$1Tercih edilen diliniz $2{0} $1olarak değiştirildi.
+minecraft.enchant.aquaaffinity=Su Adaptasyonu
+minecraft.enchant.baneofarthopods=Eklembacaklıların Kıyameti
+minecraft.enchant.binding=Bağlama Laneti
+minecraft.enchant.depthstrider=Derin Koşucu
+minecraft.enchant.efficiency=Verimlilik
+minecraft.enchant.featherfalling=Tüy Düşüşü
+minecraft.enchant.fireaspect=Ateşten Çehre
+minecraft.enchant.flame=Alev
+minecraft.enchant.fortune=Servet
+minecraft.enchant.frostwalker=Kırağı Yürüten
+minecraft.enchant.infinity=Sonsuzluk
+minecraft.enchant.knockback=Savurma
+minecraft.enchant.looting=Ganimet
+minecraft.enchant.lure=Ayartma
+minecraft.enchant.mending=Tamir
+minecraft.enchant.power=Güç
+minecraft.enchant.protection.blast=Patlama Koruması
+minecraft.enchant.protection.fire=Ateş Koruması
+minecraft.enchant.protection.projectile=Atkı Koruması
+minecraft.enchant.protection=Koruma
+minecraft.enchant.punch=Yumruk
+minecraft.enchant.respiration=Solungaç
+minecraft.enchant.sealuck=Deniz Şansı
+minecraft.enchant.sharpness=Keskinlik
+minecraft.enchant.silktouch=İpeksi Dokunuş
+minecraft.enchant.smite=Darbe
+minecraft.enchant.sweeping=Süpürücü Kenar
+minecraft.enchant.thorns=Dikenler
+minecraft.enchant.unbreaking=Kırılmazlık
+minecraft.enchant.vanishing=Kaybolma Laneti
 missing_args=Eksik argümanalar var.
 missing_converter={0} türünde parametre dönüştürücü olarak eklenmemiştir.
-toolbinding.caught.duplicate=Bu eşyaya hali hazırda bir alet bağlanmıştır.
-toolbinding.caught.block=Aletler yapı bloklarına başlanamazlar.
-toolbinding.caught.hand=Aletler boş ellere bağlanamazlar.
-worldmanagement.unloader.blacklist.failed=$2{0} $1karalistelenmiş olamaz, onun varolduğuna emin misiniz?
-worldmanagement.unloader.blacklist.added=$2{0} $1karalistelenmiştir ve çıkarılmayacaktır
-playeractions.spectator.notallowed=$4Seyirci Modundayken ışınlanamazsınız
+oldplots.caught.calculation=$4Arsanın yeri hesaplanmıyor
+oldplots.caught.location=$4 '{0}' içinde hiçbir dünya bulunmamaktadır
+oldplots.caught.player=$4Geçerli bir oyuncu bulunamadı
+oldplots.caught.plot=$4Bu ID ile arsa bulnamadı
+oldplots.caught.worlds=$4Dünyalar OldPlots olarak saklanmamıştır
+oldplots.list.hover=$2Şuraya ışınlan $1{0}$2, $1{1}, {2}
+oldplots.list.title=$1OldPlots için $2{0}
+playeractions.lang.notify.hover=$1Dil tercihinizi $2{0} $1 yapmak için buraya tıklayın.
+playeractions.lang.notify=$1Merhaba! Fark ettik ki mesajlarınızı {0} dilinde görmeyi tercih ediyorsunuz, eğer komutların da bu {0} dilinde mesaj göndermesini isterseniz buraya tıklayarak dil tercihlerinizi değiştirebilirsiniz.
 playeractions.plot.denied=$4Işınlanmaya çalıştığınız arsadan reddedildiniz
 playeractions.plot.interact=$4Buradaki varlıklarla etkileşime girmeye izniniz yoktur
 playeractions.plot.outside=$4Bir arsa dışındasınız
 playeractions.rootworld=$4Bu dünyaya taşımanıza izin yoktur
-discord.command.not.permitted=Bu komutu kullanma izniniz yoktur!
-discord.command.unknown=Özür dilerim, bu komut ile ne yapacağımı bilmiyorum!
-discord.command.caught=Özür dilerim, bu komutu başlatamadım. Lutfen bunu destek kanalımıza bildirin.
-caught.command.missingargs=$4Komutun argümanlara ihtiyacı var
-confirm.message.hover=$1Çalışan komutu doğrılayın
-confirm.message=$1Bu komutun onaylanması gerekiyor,$2[buraya] $1tıklayarak onaylayın.
-playeractions.lang.notify=$1Merhaba! Fark ettik ki mesajlarınızı {0} dilinde görmeyi tercih ediyorsunuz, eğer komutların da bu {0} dilinde mesaj göndermesini isterseniz buraya tıklayarak dil tercihlerinizi değiştirebilirsiniz.
-playeractions.lang.notify.hover=$1Dil tercihinizi $2{0} $1 yapmak için buraya tıklayın.
-settings.notifications=Bildiri al
-settings.notifications.description=Sunucu bildirimi almak için, örneğin kullanıcı tarafından dil tercihlerinizi değiştirmeniz.
-settings.language=Dil
-settings.language.description=Mesajların size görüneceği dil.
-yes=Evet
-no=Hayır
-settings=$1Ayarlar
+playeractions.spectator.notallowed=$4Seyirci Modundayken ışınlanamazsınız
+source.unknown=Bilinmiyor
+toolbinding.caught.block=Aletler yapı bloklarına başlanamazlar.
+toolbinding.caught.duplicate=Bu eşyaya hali hazırda bir alet bağlanmıştır.
+toolbinding.caught.hand=Aletler boş ellere bağlanamazlar.
+worldmanagement.unloader.blacklist.added=$2{0} $1karalistelenmiştir ve çıkarılmayacaktır
+worldmanagement.unloader.blacklist.failed=$2{0} $1karalistelenmiş olamaz, onun varolduğuna emin misiniz?
